not thing special

--- a/i18n/ar_AE.json
+++ b/i18n/ar_AE.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "إلغاء التنزيل",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "حدد &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; لمشاهدة محتوى معروض حاليًا\nعلى شاشة مصاحبة. ملاحظة: عند تحديد Crosslink\nبينما تكون مشاركة الصوت مفعلة، تكون أدوات التحكم\nفي الصوت غير متوفرة.",
+  "Menu_Help_Crosslink": "حدد <span id=\"text_Highlight\">CROSSLINK</span> لمشاهدة محتوى معروض حاليًا\nعلى شاشة مصاحبة. ملاحظة: عند تحديد Crosslink\nبينما تكون مشاركة الصوت مفعلة، تكون أدوات التحكم\nفي الصوت غير متوفرة.",
   "Menu_Help_HDMI": "يمكن تشغيل محتوى من مصدر HDMI\nعند توصيل جهاز متوافق.\nملاحظة: إذا لم يتم تشغيل أي محتوى على جهاز HDMI\nعند تحديده، ستظهر الشاشة فارغة.",
-  "Menu_Help_Input": "حدد  &lt;span id=\\&quot;text_Highlight\\&quot;&gt;&quot;مدخل&quot;&lt;/span&gt; للتوصيل بشبكة Wi-Fi.\nيتيح ذلك لك بث محتوى عبر\nالموفرين الخارجيين أو لإنشاء اتصال\nبجهازك لمشاركة المحتوى.",
+  "Menu_Help_Input": "حدد  <span id=\"text_Highlight\">&quot;مدخل&quot;</span> للتوصيل بشبكة Wi-Fi.\nيتيح ذلك لك بث محتوى عبر\nالموفرين الخارجيين أو لإنشاء اتصال\nبجهازك لمشاركة المحتوى.",
   "Menu_Help_Intro": "يسمح نظام ترفيه Bentley بعرض المحتوى\nوالاستماع إليه من جهازك المحمول المتصل عبر\nWi-Fi أو من جهاز متوافق متصل\nعبر HDMI أو USB.",
   "Menu_Help_Output": "حدد \"مخرج\" لتوصيل سماعة رأس البلوتوث\nأو اضغط على زر مشاركة الصوت\nلإرسال خرج صوت إلى سماعات السيارة.\nالصوت متوفر أيضًا عبر سماعة الرأس السلكية.",
-  "Menu_Help_Source": "حدد &quot; &lt;span id=\\&quot;text_Highlight\\&quot;&gt;مصدر&lt;/span&gt;&quot; لاختيار المحتوى المطلوب.\nيمكنك عرض المحتوى من الموفرين الخارجيين\nبتحديد الخدمة من القائمة المعروضة.\nيمكن إعادة تعيين المتصفح أيضًا في هذه القائمة.",
+  "Menu_Help_Source": "حدد &quot; <span id=\"text_Highlight\">مصدر</span>&quot; لاختيار المحتوى المطلوب.\nيمكنك عرض المحتوى من الموفرين الخارجيين\nبتحديد الخدمة من القائمة المعروضة.\nيمكن إعادة تعيين المتصفح أيضًا في هذه القائمة.",
   "Menu_Help_USB": "يمكن تشغيل الوسائط عبر جهاز متوافق\nمتصل عبر USB باستخدام تطبيق\nالتحكم في ترفيه Bentley.",
   "Menu_Install_Update": "تثبيت التحديث",
   "Menu_Settings_Acoustic_Feedback": "مردود صوتي",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "حدد &quot; &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;&quot; لتوصيل سماعة رأس Bluetooth\nأو اضغط على زر مشاركة الصوت\nلإرسال الصوت إلى سماعات السيارة.\nالصوت متوفر أيضًا عبر سماعة الرأس السلكية.",
-  "Menu_Help_Output_SOP2": "حدد &quot; &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;&quot; لتوصيل سماعة رأس Bluetooth\nأو اضغط على زر مشاركة الصوت\nلإرسال الصوت إلى سماعات السيارة.\nالصوت متوفر أيضًا عبر سماعة الرأس السلكية.",
+  "Menu_Help_Output_SOP1": "حدد &quot; <span id=\"text_Highlight\">BLUETOOTH</span>&quot; لتوصيل سماعة رأس Bluetooth\nأو اضغط على زر مشاركة الصوت\nلإرسال الصوت إلى سماعات السيارة.\nالصوت متوفر أيضًا عبر سماعة الرأس السلكية.",
+  "Menu_Help_Output_SOP2": "حدد &quot; <span id=\"text_Highlight\">BLUETOOTH</span>&quot; لتوصيل سماعة رأس Bluetooth\nأو اضغط على زر مشاركة الصوت\nلإرسال الصوت إلى سماعات السيارة.\nالصوت متوفر أيضًا عبر سماعة الرأس السلكية.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
