--- a/i18n/cs_CZ.json
+++ b/i18n/cs_CZ.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Zrušit stahování",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Výběrem &lt;span id=\\&quot;text_Highlight\\&quot;&gt;KŘÍŽOVÉ SPOJENÍ&lt;/span&gt; zobrazíte aktuálně\nzobrazený obsah na doprovodné obrazovce.\nPoznámka: pokud vyberete křížové spojení\na je aktivní sdílení zvuku, nejsou ovládací\nprvky zvuku a hlasitosti k dispozici.",
+  "Menu_Help_Crosslink": "Výběrem <span id=\"text_Highlight\">KŘÍŽOVÉ SPOJENÍ</span> zobrazíte aktuálně\nzobrazený obsah na doprovodné obrazovce.\nPoznámka: pokud vyberete křížové spojení\na je aktivní sdílení zvuku, nejsou ovládací\nprvky zvuku a hlasitosti k dispozici.",
   "Menu_Help_HDMI": "Obsah lze přehrávat ze zdroje HDMI,\nje-li připojeno kompatibilní zařízení.\nPoznámka: Pokud na zařízení HDMI\nnení přehráván žádný obsah,\npo výběru bude obrazovka prázdná.",
-  "Menu_Help_Input": "Vyberte &lt;span id=\\&quot;text_Highlight\\&quot;&gt;VSTUP&lt;/span&gt; pro připojení k síti Wi-Fi.\nTo vám umožní streamovat obsah\nprostřednictvím externích poskytovatelů\nnebo navázat spojení se zařízením\na sdílet obsah.",
+  "Menu_Help_Input": "Vyberte <span id=\"text_Highlight\">VSTUP</span> pro připojení k síti Wi-Fi.\nTo vám umožní streamovat obsah\nprostřednictvím externích poskytovatelů\nnebo navázat spojení se zařízením\na sdílet obsah.",
   "Menu_Help_Intro": "Systém Bentley Entertainment umožňuje prohlížení\na poslech obsahu z připojeného mobilního zařízení\nprostřednictvím sítě Wi-Fi nebo\nz připojeného kompatibilního zařízení\nprostřednictvím rozhraní HDMI nebo USB.",
   "Menu_Help_Output": "Vyberte BLUETOOTH pro připojení sluchátek\nBluetooth nebo stiskněte tlačítko sdílení\nzvuku a odešlete zvukový výstup\ndo reproduktorů vozu. Zvuk je\nk dispozici také prostřednictvím kabelových sluchátek.",
-  "Menu_Help_Source": "Vyberte &lt;span id=\\&quot;text_Highlight\\&quot;&gt;ZDROJ&lt;/span&gt; a požadovaný obsah.\nvýběrem služby ze zobrazeného seznamu\nmůžete zobrazit obsah od externích poskytovatelů.\nV této nabídce lze také resetovat prohlížeč.",
+  "Menu_Help_Source": "Vyberte <span id=\"text_Highlight\">ZDROJ</span> a požadovaný obsah.\nvýběrem služby ze zobrazeného seznamu\nmůžete zobrazit obsah od externích poskytovatelů.\nV této nabídce lze také resetovat prohlížeč.",
   "Menu_Help_USB": "Média lze přehrávat prostřednictvím\nkompatibilního zařízení připojeného\nprostřednictvím USB při použití\naplikace Bentley Entertainment Control.",
   "Menu_Install_Update": "Instalovat aktualizaci",
   "Menu_Settings_Acoustic_Feedback": "Zvuková zpětná vazba",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Vyberte &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; pro připojení sluchátek\nBluetooth. \n\nZvuk je k dispozici také prostřednictvím\nkabelových sluchátek.",
-  "Menu_Help_Output_SOP2": "Vyberte &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; pro připojení sluchátek\nBluetooth nebo stiskněte tlačítko sdílení\nzvuku a odešlete zvukový výstup\ndo reproduktorů vozu. Zvuk je\nk dispozici také prostřednictvím kabelových sluchátek.",
+  "Menu_Help_Output_SOP1": "Vyberte <span id=\"text_Highlight\">BLUETOOTH</span> pro připojení sluchátek\nBluetooth. \n\nZvuk je k dispozici také prostřednictvím\nkabelových sluchátek.",
+  "Menu_Help_Output_SOP2": "Vyberte <span id=\"text_Highlight\">BLUETOOTH</span> pro připojení sluchátek\nBluetooth nebo stiskněte tlačítko sdílení\nzvuku a odešlete zvukový výstup\ndo reproduktorů vozu. Zvuk je\nk dispozici také prostřednictvím kabelových sluchátek.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
