--- a/i18n/da_DK.json
+++ b/i18n/da_DK.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Afbryd download",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Vælg &lt;span id=\\&quot;text_Highlight\\&quot;&gt;KRYDSLINK&lt;/span&gt; for at se momentant vist indhold\npå ledsagerskærmen. Bemærk: ved valg af krydslink,\nnår audiodeling er aktivt, står kontroller over\naudio og lydstyrke ikke til rådighed.",
+  "Menu_Help_Crosslink": "Vælg <span id=\"text_Highlight\">KRYDSLINK</span> for at se momentant vist indhold\npå ledsagerskærmen. Bemærk: ved valg af krydslink,\nnår audiodeling er aktivt, står kontroller over\naudio og lydstyrke ikke til rådighed.",
   "Menu_Help_HDMI": "Indhold kan spilles fra en HDMI kilde,\nnår et kompatibelt apparat er forbundet.\nBemærk: hvis der ikke afspilles indhold fra HDMI\napparatet når valgt, så er skrærmen tom.",
-  "Menu_Help_Input": "Vælg &lt;span id=\\&quot;text_Highlight\\&quot;&gt;INPUT&lt;/span&gt; for at forbinde med et Wi-Fi netværk.\nDet gør, at du kan streame indhold igennem eksterne\nudbydere eller at du kan oprette forbindelse med dit\napparat for at dele indhold.",
+  "Menu_Help_Input": "Vælg <span id=\"text_Highlight\">INPUT</span> for at forbinde med et Wi-Fi netværk.\nDet gør, at du kan streame indhold igennem eksterne\nudbydere eller at du kan oprette forbindelse med dit\napparat for at dele indhold.",
   "Menu_Help_Intro": "Bentleys Underholdningssystem gør at du kan se\nog høre indhold fra dit forbundne mobile apparat\nvia Wi-Fi eller fra et kompatibelt forbundet apparat\nvia HDMI eller USB.",
   "Menu_Help_Output": "Vælg BLUETOOTH for at forbinde Bluetooth\nhøretelefoner eller tryk på knappen for audio\ndeling for at sende audio output til bilens højtalere.\nAudio kan også høres via høretelefoner med kabel.",
-  "Menu_Help_Source": "Vælg &lt;span id=\\&quot;text_Highlight\\&quot;&gt;SOURCE&lt;/span&gt; for at vælge dit ønskede indhold.\nDu kan se indhold fra eksterne udbydere\nved at vælge servicen fra den viste liste.\nBrowseren kan også nulstilles i denne menu.",
+  "Menu_Help_Source": "Vælg <span id=\"text_Highlight\">SOURCE</span> for at vælge dit ønskede indhold.\nDu kan se indhold fra eksterne udbydere\nved at vælge servicen fra den viste liste.\nBrowseren kan også nulstilles i denne menu.",
   "Menu_Help_USB": "Medier kan afspilles via et kompatibelt apparat\nforbundet via USB ved brug af\nBentleys app for kontrol af underholdning.",
   "Menu_Install_Update": "Installér update",
   "Menu_Settings_Acoustic_Feedback": "Akustisk feedback",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Vælg &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; for at forbinde Bluetooth\nhøretelefoner.\n\nAudio kan også høres via høretelefoner med kabel.",
-  "Menu_Help_Output_SOP2": "Vælg &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; for at forbinde Bluetooth\nhøretelefoner eller tryk på knappen for audio\ndeling for at sende audio output til bilens højtalere.\nAudio kan også høres via høretelefoner med kabel.",
+  "Menu_Help_Output_SOP1": "Vælg <span id=\"text_Highlight\">BLUETOOTH</span> for at forbinde Bluetooth\nhøretelefoner.\n\nAudio kan også høres via høretelefoner med kabel.",
+  "Menu_Help_Output_SOP2": "Vælg <span id=\"text_Highlight\">BLUETOOTH</span> for at forbinde Bluetooth\nhøretelefoner eller tryk på knappen for audio\ndeling for at sende audio output til bilens højtalere.\nAudio kan også høres via høretelefoner med kabel.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
