--- a/i18n/de_DE.json
+++ b/i18n/de_DE.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Download abbrechen",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Wählen Sie &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt;, um den Inhalt zu sehen, der\naktuell auf dem Begleitbildschirm angezeigt wird.\nHinweis: Bei Auswahl von Crosslink während\ndie Audioübertragung aktiv ist, sind die Ton- und\nLautstärkeregler nicht verfügbar.",
+  "Menu_Help_Crosslink": "Wählen Sie <span id=\"text_Highlight\">CROSSLINK</span>, um den Inhalt zu sehen, der\naktuell auf dem Begleitbildschirm angezeigt wird.\nHinweis: Bei Auswahl von Crosslink während\ndie Audioübertragung aktiv ist, sind die Ton- und\nLautstärkeregler nicht verfügbar.",
   "Menu_Help_HDMI": "Inhalte können von einer HDMI-Quelle abgespielt\nwerden, wenn ein kompatibles Gerät verbunden ist.\nHinweis: Wenn nach der Auswahl kein Inhalt auf\ndem HDMI-Gerät abgespielt wird, wird ein leerer\nBildschirm angezeigt.",
-  "Menu_Help_Input": "Wählen Sie &lt;span id=\\&quot;text_Highlight\\&quot;&gt;EINGABE&lt;/span&gt;, um die Verbindung\nmit einem WLAN-Netzwerk herzustellen.\nSo können Sie Inhalte von externen Anbietern\nstreamen oder eine Verbindung mit Ihrem Gerät\nherstellen, um Inhalte zu übertragen.",
+  "Menu_Help_Input": "Wählen Sie <span id=\"text_Highlight\">EINGABE</span>, um die Verbindung\nmit einem WLAN-Netzwerk herzustellen.\nSo können Sie Inhalte von externen Anbietern\nstreamen oder eine Verbindung mit Ihrem Gerät\nherstellen, um Inhalte zu übertragen.",
   "Menu_Help_Intro": "Das Bentley Entertainment System gestattet Ihnen,\nInhalte von Ihrem über WLAN verbundenen Mobilgerät\noder von einem kompatiblen Gerät, das über HDMI\noder USB verbunden ist, anzusehen und anzuhören.",
   "Menu_Help_Output": "Wählen Sie BLUETOOTH, um Bluetooth-\nKopfhörer zu verbinden oder drücken\nSie auf Audioübertragung, um den Ton über\ndie Lautsprecher im Fahrzeug zu hören.\nKopfhörer mit Kabel sind ebenfalls nutzbar.",
-  "Menu_Help_Source": "Wählen Sie &lt;span id=\\&quot;text_Highlight\\&quot;&gt;QUELLE&lt;/span&gt; aus, um den gewünschten Inhalt\nauszuwählen. Sie können Inhalte von externen\nAnbietern ansehen, indem Sie den Dienst in der\nangezeigten Liste auswählen. Der Browser kann in\ndiesem Menü ebenfalls zurückgesetzt werden.",
+  "Menu_Help_Source": "Wählen Sie <span id=\"text_Highlight\">QUELLE</span> aus, um den gewünschten Inhalt\nauszuwählen. Sie können Inhalte von externen\nAnbietern ansehen, indem Sie den Dienst in der\nangezeigten Liste auswählen. Der Browser kann in\ndiesem Menü ebenfalls zurückgesetzt werden.",
   "Menu_Help_USB": "Medien können mithilfe der Bentley Entertainment\nControl App über ein kompatibles, per USB\nverbundenes Gerät abgespielt werden.",
   "Menu_Install_Update": "Update installieren",
   "Menu_Settings_Acoustic_Feedback": "Akustisches Feedback",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Wählen Sie &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;, um Bluetooth-\nKopfhörer zu verbinden.\n\nKopfhörer mit Kabel sind ebenfalls nutzbar.",
-  "Menu_Help_Output_SOP2": "Wählen Sie &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;, um Bluetooth-\nKopfhörer zu verbinden oder drücken\nSie auf Audioübertragung, um den Ton über\ndie Lautsprecher im Fahrzeug zu hören.\nKopfhörer mit Kabel sind ebenfalls nutzbar.",
+  "Menu_Help_Output_SOP1": "Wählen Sie <span id=\"text_Highlight\">BLUETOOTH</span>, um Bluetooth-\nKopfhörer zu verbinden.\n\nKopfhörer mit Kabel sind ebenfalls nutzbar.",
+  "Menu_Help_Output_SOP2": "Wählen Sie <span id=\"text_Highlight\">BLUETOOTH</span>, um Bluetooth-\nKopfhörer zu verbinden oder drücken\nSie auf Audioübertragung, um den Ton über\ndie Lautsprecher im Fahrzeug zu hören.\nKopfhörer mit Kabel sind ebenfalls nutzbar.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
