--- a/i18n/el_GR.json
+++ b/i18n/el_GR.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Ακύρωση λήψης",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Επιλέξτε &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; για προβολή περιεχομένου στην\nοθόνη συνοδού. Σημείωση: αν επιλεγεί η διασύνδεση\nμε ενεργή την κοινή χρήση ήχου, τα χειριστήρια ήχου\nκαι έντασης είναι μη διαθέσιμα.",
+  "Menu_Help_Crosslink": "Επιλέξτε <span id=\"text_Highlight\">CROSSLINK</span> για προβολή περιεχομένου στην\nοθόνη συνοδού. Σημείωση: αν επιλεγεί η διασύνδεση\nμε ενεργή την κοινή χρήση ήχου, τα χειριστήρια ήχου\nκαι έντασης είναι μη διαθέσιμα.",
   "Menu_Help_HDMI": "Δυνατή αναπαραγωγή περιεχομένου από πηγή HDMI\nκατά τη σύνδεση συμβατής συσκευής.\nΣημείωση: Αν δεν αναπαράγεται περιεχόμενο σε HDMI\nόταν επιλεγεί, η οθόνη θα εμφανίζεται κενή.",
-  "Menu_Help_Input": "Επιλέξτε &lt;span id=\\&quot;text_Highlight\\&quot;&gt;ΕΙΣΟΔΟΣ&lt;/span&gt; για σύνδεση σε δίκτυο Wi-Fi.\nΑυτό επιτρέπει τη μετάδοση μέσω ροής περιεχομένου\nαπό εξωτερικούς παρόχους ή τη δημιουργία σύνδεσης\nμε τη συσκευή σας για την κοινή χρήση περιεχομένου.",
+  "Menu_Help_Input": "Επιλέξτε <span id=\"text_Highlight\">ΕΙΣΟΔΟΣ</span> για σύνδεση σε δίκτυο Wi-Fi.\nΑυτό επιτρέπει τη μετάδοση μέσω ροής περιεχομένου\nαπό εξωτερικούς παρόχους ή τη δημιουργία σύνδεσης\nμε τη συσκευή σας για την κοινή χρήση περιεχομένου.",
   "Menu_Help_Intro": "Το σύστημα Bentley Entertainment σας επιτρέπει να\nβλέπετε και να ακούτε περιεχόμενο από το κινητό σας\nμε σύνδεση μέσω Wi-Fi ή μια συμβατή συσκευή\nσυνδεδεμένη μέσω HDMI ή USB.",
   "Menu_Help_Output": "Επιλέξτε BLUETOOTH για σύνδεση ακουστικών\nBluetooth ή πατήστε το κουμπί κοινής χρήσης ήχου για\nαποστολή εξόδου ήχου στα ηχεία του αυτοκινήτου.\nΟ ήχος διατίθεται και μέσω ενσύρματων ακουστικών.",
-  "Menu_Help_Source": "Επιλέξτε &lt;span id=\\&quot;text_Highlight\\&quot;&gt;SOURCE&lt;/span&gt; για να επιλέξετε περιεχόμενο.\nΠροβάλετε περιεχόμενο από εξωτερικούς παρόχους\nεπιλέγοντας την υπηρεσία από την εμφανιζόμενη λίστα.\nΔυνατότητα επαναφοράς προγράμματος περιήγησης.",
+  "Menu_Help_Source": "Επιλέξτε <span id=\"text_Highlight\">SOURCE</span> για να επιλέξετε περιεχόμενο.\nΠροβάλετε περιεχόμενο από εξωτερικούς παρόχους\nεπιλέγοντας την υπηρεσία από την εμφανιζόμενη λίστα.\nΔυνατότητα επαναφοράς προγράμματος περιήγησης.",
   "Menu_Help_USB": "Είναι δυνατή η αναπαραγωγή πολυμέσων μέσω\nσυμβατής συσκευής συνδεδεμένης σε USB κατά τη\nχρήση της εφαρμογής Bentley Entertainment Control.",
   "Menu_Install_Update": "Εγκατάσταση ενημέρωσης",
   "Menu_Settings_Acoustic_Feedback": "Ακουστική ανάδραση",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Επιλέξτε &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; για σύνδεση ακουστικών\nBluetooth.\n\nΟ ήχος διατίθεται και μέσω ενσύρματων ακουστικών.",
-  "Menu_Help_Output_SOP2": "Επιλέξτε &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; για σύνδεση ακουστικών\nBluetooth ή πατήστε το κουμπί κοινής χρήσης ήχου για\nαποστολή εξόδου ήχου στα ηχεία του αυτοκινήτου.\nΟ ήχος διατίθεται και μέσω ενσύρματων ακουστικών.",
+  "Menu_Help_Output_SOP1": "Επιλέξτε <span id=\"text_Highlight\">BLUETOOTH</span> για σύνδεση ακουστικών\nBluetooth.\n\nΟ ήχος διατίθεται και μέσω ενσύρματων ακουστικών.",
+  "Menu_Help_Output_SOP2": "Επιλέξτε <span id=\"text_Highlight\">BLUETOOTH</span> για σύνδεση ακουστικών\nBluetooth ή πατήστε το κουμπί κοινής χρήσης ήχου για\nαποστολή εξόδου ήχου στα ηχεία του αυτοκινήτου.\nΟ ήχος διατίθεται και μέσω ενσύρματων ακουστικών.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
