--- a/i18n/en_GB.json
+++ b/i18n/en_GB.json
@@ -53,7 +53,7 @@
   "Bluetooth_Visibility_Main_Text": "Pairing new headphones?\nHeadphones must be in pairing mode.",
   "Cancel_Download_Headline": "Software update",
   "Cancel_Download_Main_Text": "Are you sure you want to\ncancel the download?",
-  "Checkbox_Text": "Don&apos;t show again",
+  "Checkbox_Text": "Don't show again",
   "Child_Lock_Activated_Notification": "Child lock has been activated",
   "Child_Lock_Active_Notification": "Child lock is active",
   "Child_Lock_Deactivated_Notification": "Child lock has been deactivated",
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Cancel download",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Select &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; to view content currently shown\non the companion screen. Note: if selecting crosslink\nwhen audio sharing is active, audio and volume\ncontrols are unavailable.",
+  "Menu_Help_Crosslink": "Select <span id=\"text_Highlight\">CROSSLINK</span> to view content currently shown\non the companion screen. Note: if selecting crosslink\nwhen audio sharing is active, audio and volume\ncontrols are unavailable.",
   "Menu_Help_HDMI": "Content can be played from a HDMI source\nwhen a compatible device is connected.\nNote: if no content is playing on the HDMI device\nwhen selected, the screen will appear blank.",
-  "Menu_Help_Input": "Select &lt;span id=\\&quot;text_Highlight\\&quot;&gt;WI-FI&lt;/span&gt; to connect to a wireless network.\nThis enables you to stream content through\nexternal providers or to establish a connection\nwith your device to share content.",
+  "Menu_Help_Input": "Select <span id=\"text_Highlight\">WI-FI</span> to connect to a wireless network.\nThis enables you to stream content through\nexternal providers or to establish a connection\nwith your device to share content.",
   "Menu_Help_Intro": "The Bentley Entertainment System allows you to view\nand hear content from your mobile device connected\nvia Wi-Fi or from a compatible device connected\nthrough HDMI or USB.",
   "Menu_Help_Output": "Select BLUETOOTH to connect Bluetooth headphones\nor press the audio sharing button to\nsend audio output to the car speakers.\nAudio is also available through wired headphones.",
-  "Menu_Help_Source": "Select &lt;span id=\\&quot;text_Highlight\\&quot;&gt;SOURCE&lt;/span&gt; to choose your desired content.\nYou can view content from external providers\nby selecting the service from the list shown.\nThe browser can also be reset in this menu.",
+  "Menu_Help_Source": "Select <span id=\"text_Highlight\">SOURCE</span> to choose your desired content.\nYou can view content from external providers\nby selecting the service from the list shown.\nThe browser can also be reset in this menu.",
   "Menu_Help_USB": "Media can be played through a compatible\ndevice connected via USB when using the\nBentley Entertainment Control app.",
   "Menu_Install_Update": "Install update",
   "Menu_Settings_Acoustic_Feedback": "Acoustic feedback",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Select &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; to connect\nBluetooth headphones.\n\nAudio is also available through wired headphones.",
-  "Menu_Help_Output_SOP2": "Select &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; to connect Bluetooth headphones\nor press the audio sharing button to\nsend audio output to the car speakers.\nAudio is also available through wired headphones.",
+  "Menu_Help_Output_SOP1": "Select <span id=\"text_Highlight\">BLUETOOTH</span> to connect\nBluetooth headphones.\n\nAudio is also available through wired headphones.",
+  "Menu_Help_Output_SOP2": "Select <span id=\"text_Highlight\">BLUETOOTH</span> to connect Bluetooth headphones\nor press the audio sharing button to\nsend audio output to the car speakers.\nAudio is also available through wired headphones.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
