--- a/i18n/es_ES.json
+++ b/i18n/es_ES.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Cancelar descarga",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Seleccione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; para ver el contenido\nmostrado en la pantalla acompañamiento. Nota: si\nse selecciona Crosslink cuando compartir audio está\nactivo, los controles de audio y vídeo no estarán\ndisponibles.",
+  "Menu_Help_Crosslink": "Seleccione <span id=\"text_Highlight\">CROSSLINK</span> para ver el contenido\nmostrado en la pantalla acompañamiento. Nota: si\nse selecciona Crosslink cuando compartir audio está\nactivo, los controles de audio y vídeo no estarán\ndisponibles.",
   "Menu_Help_HDMI": "Puede reproducirse el contenido de un\ndispositivo HDMI compatible conectado.\nNota: si no se reproduce ningún contenido en el\ndispositivo HDMI, la pantalla se mostrará vacía.",
-  "Menu_Help_Input": "Seleccione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;ENTRADA&lt;/span&gt; para conectar a una red Wi-Fi.\nEsto permite transmitir contenido a través de\nproveedores externos o establecer una conexión con\nsu dispositivo para compartir contenido.",
+  "Menu_Help_Input": "Seleccione <span id=\"text_Highlight\">ENTRADA</span> para conectar a una red Wi-Fi.\nEsto permite transmitir contenido a través de\nproveedores externos o establecer una conexión con\nsu dispositivo para compartir contenido.",
   "Menu_Help_Intro": "El Sistema de Entretenimiento de Bentley le permite\nver y escuchar contenido desde su dispositivo móvil\nconectado a través de Wi-Fi o desde un dispositivo\ncompatible conectado a través de HDMI o USB.",
   "Menu_Help_Output": "Seleccione BLUETOOTH para conectar auriculares\nBluetooth o pulse el botón de compartir audio para\nenviar la salida de audio a los altavoces del vehículo.\nAudio también disponible a través de auriculares\ncon cables.",
-  "Menu_Help_Source": "Seleccione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;FUENTE&lt;/span&gt; para elegir el contenido que desee.\nPuede ver contenido de proveedores externos mediante\nla selección del servicio en la lista mostrada. El\nnavegador también se restablece en este menú.",
+  "Menu_Help_Source": "Seleccione <span id=\"text_Highlight\">FUENTE</span> para elegir el contenido que desee.\nPuede ver contenido de proveedores externos mediante\nla selección del servicio en la lista mostrada. El\nnavegador también se restablece en este menú.",
   "Menu_Help_USB": "Pueden reproducirse contenidos a través de un\ndispositivo compatible conectado por USB cuando\nse utiliza la aplicación Bentley Entertainment Control.",
   "Menu_Install_Update": "Instalar actualización",
   "Menu_Settings_Acoustic_Feedback": "Respuesta acústica",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Seleccione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; para conectar auriculares\nBluetooth.\n\nAudio también disponible a través de auriculares\ncon cables.",
-  "Menu_Help_Output_SOP2": "Seleccione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; para conectar auriculares\nBluetooth o pulse el botón de compartir audio para\nenviar la salida de audio a los altavoces del vehículo.\nAudio también disponible a través de auriculares\ncon cables.",
+  "Menu_Help_Output_SOP1": "Seleccione <span id=\"text_Highlight\">BLUETOOTH</span> para conectar auriculares\nBluetooth.\n\nAudio también disponible a través de auriculares\ncon cables.",
+  "Menu_Help_Output_SOP2": "Seleccione <span id=\"text_Highlight\">BLUETOOTH</span> para conectar auriculares\nBluetooth o pulse el botón de compartir audio para\nenviar la salida de audio a los altavoces del vehículo.\nAudio también disponible a través de auriculares\ncon cables.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
