--- a/i18n/hu_HU.json
+++ b/i18n/hu_HU.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Letöltés megszakítása",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Válassza a &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; lehetőséget a jelenlegi tartalin\nkís.képernyőn történő megjel. Megjegyzés: ha a\ncrosslink hangmegosztáskor van kivál., az audio- és\nhangerőszabályzók nem érhetők el.",
+  "Menu_Help_Crosslink": "Válassza a <span id=\"text_Highlight\">CROSSLINK</span> lehetőséget a jelenlegi tartalin\nkís.képernyőn történő megjel. Megjegyzés: ha a\ncrosslink hangmegosztáskor van kivál., az audio- és\nhangerőszabályzók nem érhetők el.",
   "Menu_Help_HDMI": "A tartalom akkor játszható le HDMI-forrásból,\nha kompatibilis eszköz van csatlakoztatva.\njátszik le tartalmat, a képernyő üres lesz.",
-  "Menu_Help_Input": "Válassza az &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BEMENET&lt;/span&gt; lehetőséget a\nWi-Fi-kapcsolathoz. Ez lehetővé teszi a külsős\nszolgáltatói tartalmak streamelését vagy kapcsolatot\nlétrehozását az eszközzel tartalommegosztás céljából.",
+  "Menu_Help_Input": "Válassza az <span id=\"text_Highlight\">BEMENET</span> lehetőséget a\nWi-Fi-kapcsolathoz. Ez lehetővé teszi a külsős\nszolgáltatói tartalmak streamelését vagy kapcsolatot\nlétrehozását az eszközzel tartalommegosztás céljából.",
   "Menu_Help_Intro": "A Bentley Entertainment System lehetővé teszi\nWi-Fi-n keresztül csatlakoztatott mobil eszközön vagy\nHDMI-n vagy USB-n keresztül csatlakoztatott komp.\neszközök tartalmainak megtekintését és hallgatását.",
   "Menu_Help_Output": "Válassza az BLUETOOTH lehetőséget Bluetooth\n-fejhallg. csatlakoztatásához vagy nyomja meg a\nhangmegosztás gombot a hang hangszóróra történő\nküldéséhez. A hang vezetékes fejhallgatón keresztül\nis hallgatható.",
-  "Menu_Help_Source": "Válassza a &lt;span id=\\&quot;text_Highlight\\&quot;&gt;SOURCE&lt;/span&gt; gombot a kívánt tartalomhoz.\nKülsős szolgáltatók tartalmainak megtekintéséhez.\nválassza ki a szolgáltatást a megjelenő listából.\nA böngésző is ebben a menüben állítható vissza.",
+  "Menu_Help_Source": "Válassza a <span id=\"text_Highlight\">SOURCE</span> gombot a kívánt tartalomhoz.\nKülsős szolgáltatók tartalmainak megtekintéséhez.\nválassza ki a szolgáltatást a megjelenő listából.\nA böngésző is ebben a menüben állítható vissza.",
   "Menu_Help_USB": "Médiafájlok akkor játszhatók le USB-n\nkeresztül csatlakoztatott eszközről, ha a\nBentley Entertainment Control alkalmazást használja.",
   "Menu_Install_Update": "Frissítés telepítése",
   "Menu_Settings_Acoustic_Feedback": "Akusztikus jelzés",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Válassza az &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; lehetőséget Bluetooth\n-fejhallg. csatlakoztatásához vagy nyomja meg a\nhangmegosztás gombot a hang hangszóróra történő\nküldéséhez. A hang vezetékes fejhallgatón keresztül\nis hallgatható.",
-  "Menu_Help_Output_SOP2": "Válassza az &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; lehetőséget Bluetooth\n-fejhallg. csatlakoztatásához vagy nyomja meg a\nhangmegosztás gombot a hang hangszóróra történő\nküldéséhez. A hang vezetékes fejhallgatón keresztül\nis hallgatható.",
+  "Menu_Help_Output_SOP1": "Válassza az <span id=\"text_Highlight\">BLUETOOTH</span> lehetőséget Bluetooth\n-fejhallg. csatlakoztatásához vagy nyomja meg a\nhangmegosztás gombot a hang hangszóróra történő\nküldéséhez. A hang vezetékes fejhallgatón keresztül\nis hallgatható.",
+  "Menu_Help_Output_SOP2": "Válassza az <span id=\"text_Highlight\">BLUETOOTH</span> lehetőséget Bluetooth\n-fejhallg. csatlakoztatásához vagy nyomja meg a\nhangmegosztás gombot a hang hangszóróra történő\nküldéséhez. A hang vezetékes fejhallgatón keresztül\nis hallgatható.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
