--- a/i18n/it_IT.json
+++ b/i18n/it_IT.json
@@ -47,7 +47,7 @@
   "Bluetooth_Audio_Sync_Error": "Sincronizzazione audio non\nriuscita. Riprovare più tardi.",
   "Bluetooth_Audio_Sync_Headline": "Sincronizzazione audio",
   "Bluetooth_Audio_Sync_In_Progress": "Sincronizzazione in corso...\n{0}%",
-  "Bluetooth_Audio_Sync_Main_Text": "Tenere le cuffie vicino\nal microfono sullo schermo\ne premere avvio.\nL&apos;audio verrà silenziato\ndurante il processo di\nsincronizzazione.",
+  "Bluetooth_Audio_Sync_Main_Text": "Tenere le cuffie vicino\nal microfono sullo schermo\ne premere avvio.\nL'audio verrà silenziato\ndurante il processo di\nsincronizzazione.",
   "Bluetooth_Headline": "Bluetooth",
   "Bluetooth_Status": "BLUETOOTH",
   "Bluetooth_Visibility_Main_Text": "Associare nuove cuffie?\nLe cuffie devono essere in modalità accoppiamento.",
@@ -64,7 +64,7 @@
   "Connection_Assistant_QR_Code_1_Main_Text": "Scansionare il codice QR per\ncollegare allo schermo via Wi-Fi:",
   "Connection_Assistant_QR_Code_2_Main_Text": "Scan the QR code to download the\nBentley Entertainment Control app",
   "Connection_Assistant_QR_Code_2_SOP1_Main_Text": "Ensure your device and this screen are on\nthe same Wi-Fi network to stream media",
-  "Connection_Assistant_QR_Code_2_SOP2_Main_Text": "Scansionare il codice QR per\nscaricare l&apos;app Controllo\nIntrattenimento Bentley.",
+  "Connection_Assistant_QR_Code_2_SOP2_Main_Text": "Scansionare il codice QR per\nscaricare l'app Controllo\nIntrattenimento Bentley.",
   "Connection_Failed_Headline": "Wi-Fi",
   "Connection_Failed_Main_Text": "Non è stato possibile stabilire\nuna connessione di rete.",
   "Connection_Failed_Password_Headline": "Wi-Fi",
@@ -80,7 +80,7 @@
   "Crosslink_Searching_Text": "Ricerca...",
   "Delete_Device_Main_Text": "Cancellare questo dispositivo Bluetooth?",
   "Delete_Install_Headline": "Update software",
-  "Delete_Install_Main_Text": "Sicuri di voler cancellare\nl&apos;aggiornamento software?",
+  "Delete_Install_Main_Text": "Sicuri di voler cancellare\nl'aggiornamento software?",
   "Delete_Network_Main_Text": "Sicuri di voler cancellare la presente rete?",
   "Device_Search_Menu_Text": "Ricerca...",
   "Download_Failed_Headline": "Update software",
@@ -100,11 +100,11 @@
   "IVI_Sync_In_Progress": "Sincronizzazione in corso...\n{0}%",
   "IVI_Sync_Main_Text": "Selezionare il nome schermo\ncome audio Bluetooth\nsu sistema Infotainment.\nVerificare il volume e\nridurre rumori di sottofondo.\nPremere START quando il\nsistema è pronto.",
   "Install_Active_Headline": "Nota",
-  "Install_Active_Main_Text": "Completamento installazione\naggiornamento {0}%.\n\nAssicurarsi che la vettura resti accesa\nfino al completamento dell&apos;aggiornamento.\n\nIl sistema verrà riavviato ad installazione completata.",
+  "Install_Active_Main_Text": "Completamento installazione\naggiornamento {0}%.\n\nAssicurarsi che la vettura resti accesa\nfino al completamento dell'aggiornamento.\n\nIl sistema verrà riavviato ad installazione completata.",
   "Install_Available_Headline": "Update software",
-  "Install_Available_Main_Text": "Installazione software disponibile.\nSi desidera installare adesso?\n\nDurante l&apos;aggiornamento il sistema sarà inutilizzabile.",
+  "Install_Available_Main_Text": "Installazione software disponibile.\nSi desidera installare adesso?\n\nDurante l'aggiornamento il sistema sarà inutilizzabile.",
   "Install_Delete_Headline": "Update software",
-  "Install_Delete_Main_Text": "Si desidera installare o cancellare l&apos;aggiornamento?\n\nDurante il processo di aggiornamento del software\nil sistema sarà inutilizzabile.",
+  "Install_Delete_Main_Text": "Si desidera installare o cancellare l'aggiornamento?\n\nDurante il processo di aggiornamento del software\nil sistema sarà inutilizzabile.",
   "Install_Failed_Headline": "Update software",
   "Install_Failed_Main_Text": "Installazione software non riuscita.\nSi desidera riprovare?",
   "Install_Successful_Headline": "Update software",
@@ -169,14 +169,14 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Interrompere il download",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Selezionare &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; per visualizzare il contenuto\nmostrato sullo schermo di accompagnamento. Nota: se\nsi seleziona il Crosslink con condivisione audio attiva, i\ncomandi audio e volume non sono disponibili.",
+  "Menu_Help_Crosslink": "Selezionare <span id=\"text_Highlight\">CROSSLINK</span> per visualizzare il contenuto\nmostrato sullo schermo di accompagnamento. Nota: se\nsi seleziona il Crosslink con condivisione audio attiva, i\ncomandi audio e volume non sono disponibili.",
   "Menu_Help_HDMI": "Il contenuto può essere riprodotto da sorgente HDMI\nquando è connesso un dispositivo compatibile.\nNota: se non si riproducono contenuti su dispositivo\nHDMI, ove selezionati, lo schermo apparirà nero.",
-  "Menu_Help_Input": "Selezionare &lt;span id=\\&quot;text_Highlight\\&quot;&gt;INPUT&lt;/span&gt; per collegare a rete Wi-Fi.\nCiò consente di trasferire il contenuto attraverso\nfornitori esterni o stabilire una connessione\ncon il dispositivo per condividere il contenuto.",
+  "Menu_Help_Input": "Selezionare <span id=\"text_Highlight\">INPUT</span> per collegare a rete Wi-Fi.\nCiò consente di trasferire il contenuto attraverso\nfornitori esterni o stabilire una connessione\ncon il dispositivo per condividere il contenuto.",
   "Menu_Help_Intro": "Il Sistema di intrattenimento Bentley consente di\nvedere e ascoltare contenuti dal dispositivo mobile\nconnesso via Wi-Fi o un dispositivo compatibile\nconnesso attraverso HDMI o USB.",
   "Menu_Help_Output": "Selezionare BLUETOOTH per collegare le cuffie\nBluetooth o premere il pulsante di condivisione\naudio per inviare output audio agli altoparlanti.\nL'audio è anche disponibile mediante cuffie cablate.",
-  "Menu_Help_Source": "Selezionare &lt;span id=\\&quot;text_Highlight\\&quot;&gt;SOURCE&lt;/span&gt; per il contenuto desiderato.\nPer visualizzare il contenuto mediante fornitori esterni\nselezionare il servizio dalla lista indicata.\nIl browser può essere ripristinato nel presente menù.",
-  "Menu_Help_USB": "I media possono essere riprodotti mediante dispositivo\ncompatibile collegato via USB durante l&apos;uso dell&apos;app\ndi Controllo intrattenimento Bentley.",
-  "Menu_Install_Update": "Installare l&apos;aggiornamento",
+  "Menu_Help_Source": "Selezionare <span id=\"text_Highlight\">SOURCE</span> per il contenuto desiderato.\nPer visualizzare il contenuto mediante fornitori esterni\nselezionare il servizio dalla lista indicata.\nIl browser può essere ripristinato nel presente menù.",
+  "Menu_Help_USB": "I media possono essere riprodotti mediante dispositivo\ncompatibile collegato via USB durante l'uso dell'app\ndi Controllo intrattenimento Bentley.",
+  "Menu_Install_Update": "Installare l'aggiornamento",
   "Menu_Settings_Acoustic_Feedback": "Feedback acustico",
   "Menu_Settings_Audio_Sync": "Sincronizzazione audio",
   "Menu_Settings_Brightness_Persistence": "Persistenza luminosità",
@@ -270,8 +270,8 @@
   "Update_Unavailable_Headline": "Update software",
   "Update_Unavailable_Main_Text": "Impossibilità di controllo aggiornamenti.\nSi prega di riprovare più tardi.",
   "Use_Extension_Headline": "Nota",
-  "Use_Extension_Main_Text_PL": "Il Sistema di intrattenimento Bentley\nsi spegnerà tra {0} secondi.\nPremere OK per prolungarne l&apos;utilizzo.",
-  "Use_Extension_Main_Text_SG": "Il Sistema di intrattenimento Bentley\nsi spegnerà tra {0} secondi.\nPremere OK per prolungarne l&apos;utilizzo.",
+  "Use_Extension_Main_Text_PL": "Il Sistema di intrattenimento Bentley\nsi spegnerà tra {0} secondi.\nPremere OK per prolungarne l'utilizzo.",
+  "Use_Extension_Main_Text_SG": "Il Sistema di intrattenimento Bentley\nsi spegnerà tra {0} secondi.\nPremere OK per prolungarne l'utilizzo.",
   "Wi-Fi_Status": "WI-FI",
   "WiFi_Headline": "Wi-Fi",
   "acoustic": "Acoustic",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Selezionare &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; per collegare le cuffie\nBluetooth.\n\nL&apos;audio è anche disponibile mediante cuffie cablate.",
-  "Menu_Help_Output_SOP2": "Selezionare &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; per collegare le cuffie\nBluetooth o premere il pulsante di condivisione\naudio per inviare output audio agli altoparlanti.\nL&apos;audio è anche disponibile mediante cuffie cablate.",
+  "Menu_Help_Output_SOP1": "Selezionare <span id=\"text_Highlight\">BLUETOOTH</span> per collegare le cuffie\nBluetooth.\n\nL'audio è anche disponibile mediante cuffie cablate.",
+  "Menu_Help_Output_SOP2": "Selezionare <span id=\"text_Highlight\">BLUETOOTH</span> per collegare le cuffie\nBluetooth o premere il pulsante di condivisione\naudio per inviare output audio agli altoparlanti.\nL'audio è anche disponibile mediante cuffie cablate.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
