--- a/i18n/ko_KR.json
+++ b/i18n/ko_KR.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "다운로드 취소",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "동반 화면에서 현재 표시되는 콘텐츠를 보려면\n&lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt;를 선택하십시오. 참고: 오디오 공유가\n활성화되어 있을 때 Crosslink를 선택하면 오디오 및\n볼륨 컨트롤을 사용할 수 없습니다.",
+  "Menu_Help_Crosslink": "동반 화면에서 현재 표시되는 콘텐츠를 보려면\n<span id=\"text_Highlight\">CROSSLINK</span>를 선택하십시오. 참고: 오디오 공유가\n활성화되어 있을 때 Crosslink를 선택하면 오디오 및\n볼륨 컨트롤을 사용할 수 없습니다.",
   "Menu_Help_HDMI": "호환되는 장치가 연결되어 있으면\nHDMI 소스의 콘텐츠를 재생할 수 있습니다.\n참고: HDMI 장치가 선택되어 있을 때 재생되는\n콘텐츠가 없으면 화면이 공백으로 표시됩니다.",
-  "Menu_Help_Input": "Wi-Fi 네트워크에 연결하려면 &lt;span id=\\&quot;text_Highlight\\&quot;&gt;입력을&lt;/span&gt; 선택하십시오.\n이렇게 하면 외부 제공자를 통해 콘텐츠를\n스트리밍하거나 장치와 연결을 구축하여\n콘텐츠를 공유할 수 있습니다.",
+  "Menu_Help_Input": "Wi-Fi 네트워크에 연결하려면 <span id=\"text_Highlight\">입력을</span> 선택하십시오.\n이렇게 하면 외부 제공자를 통해 콘텐츠를\n스트리밍하거나 장치와 연결을 구축하여\n콘텐츠를 공유할 수 있습니다.",
   "Menu_Help_Intro": "Bentley 엔터테인먼트 시스템을 사용하면\nWi-Fi를 통해 연결된 모바일 장치나\nHDMI 또는 USB를 통해 연결된 호환 장치의\n콘텐츠를 보고 들을 수 있습니다.",
   "Menu_Help_Output": "<span id=\"text_Highlight\">블루투스 헤드폰</span>을 연결하려면 출력을 선택하십시오.\n오디오 출력을 차량 스피커로 보내려면\n오디오 공유 버튼을 누르십시오.\n유선 헤드폰을 통해서도 오디오를 사용할 수 있습니다.",
-  "Menu_Help_Source": "원하는 콘텐츠를 고르려면 &lt;span id=\\&quot;text_Highlight\\&quot;&gt;소스를&lt;/span&gt; 선택하십시오.\n표시되는 목록에서 서비스를 선택하여\n외부 제공자의 콘텐츠를 볼 수 있습니다.\n이 메뉴에서 브라우저를 재설정할 수도 있습니다.",
+  "Menu_Help_Source": "원하는 콘텐츠를 고르려면 <span id=\"text_Highlight\">소스를</span> 선택하십시오.\n표시되는 목록에서 서비스를 선택하여\n외부 제공자의 콘텐츠를 볼 수 있습니다.\n이 메뉴에서 브라우저를 재설정할 수도 있습니다.",
   "Menu_Help_USB": "Bentley 엔터테인먼트 컨트롤 앱을 사용하면\nUSB를 통해 연결된 호환 장치를 통해\n미디어를 재생할 수 있습니다.",
   "Menu_Install_Update": "업데이트 설치",
   "Menu_Settings_Acoustic_Feedback": "음향 피드백",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "블루투스 헤드폰을 연결하려면 &lt;span id=\\&quot;text_Highlight\\&quot;&gt;출력을&lt;/span&gt; 선택하십시오.\n오디오 출력을 차량 스피커로 보내려면\n오디오 공유 버튼을 누르십시오.\n유선 헤드폰을 통해서도 오디오를 사용할 수 있습니다.",
-  "Menu_Help_Output_SOP2": "블루투스 헤드폰을 연결하려면 &lt;span id=\\&quot;text_Highlight\\&quot;&gt;출력을&lt;/span&gt; 선택하십시오.\n오디오 출력을 차량 스피커로 보내려면\n오디오 공유 버튼을 누르십시오.\n유선 헤드폰을 통해서도 오디오를 사용할 수 있습니다.",
+  "Menu_Help_Output_SOP1": "블루투스 헤드폰을 연결하려면 <span id=\"text_Highlight\">출력을</span> 선택하십시오.\n오디오 출력을 차량 스피커로 보내려면\n오디오 공유 버튼을 누르십시오.\n유선 헤드폰을 통해서도 오디오를 사용할 수 있습니다.",
+  "Menu_Help_Output_SOP2": "블루투스 헤드폰을 연결하려면 <span id=\"text_Highlight\">출력을</span> 선택하십시오.\n오디오 출력을 차량 스피커로 보내려면\n오디오 공유 버튼을 누르십시오.\n유선 헤드폰을 통해서도 오디오를 사용할 수 있습니다.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
