--- a/i18n/nl_BE.json
+++ b/i18n/nl_BE.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Download annuleren",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Selecteer &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; om de inhoud te zien die nu\nop het partnerscherm wordt getoond. Opmerking:\nals crosslink wordt geselecteerd wanneer audio delen\nactief is, zijn audio en volumeregeling niet beschikbaar.",
+  "Menu_Help_Crosslink": "Selecteer <span id=\"text_Highlight\">CROSSLINK</span> om de inhoud te zien die nu\nop het partnerscherm wordt getoond. Opmerking:\nals crosslink wordt geselecteerd wanneer audio delen\nactief is, zijn audio en volumeregeling niet beschikbaar.",
   "Menu_Help_HDMI": "Inhoud kan worden afgespeeld van een HDMI-bron\nwanneer een compatibel apparaat is aangesloten.\nOpmerking: als er geen inhoud wordt afgespeeld op het\nHDMI-apparaat, is het scherm leeg bij selectie.",
-  "Menu_Help_Input": "Kies &lt;span id=\\&quot;text_Highlight\\&quot;&gt;INGANG&lt;/span&gt; om te verbinden met een wifi-netwerk.\nHiermee kunt u inhoud streamen via externe providers\nof een verbinding maken met uw apparaat om inhoud\nte delen.",
+  "Menu_Help_Input": "Kies <span id=\"text_Highlight\">INGANG</span> om te verbinden met een wifi-netwerk.\nHiermee kunt u inhoud streamen via externe providers\nof een verbinding maken met uw apparaat om inhoud\nte delen.",
   "Menu_Help_Intro": "Met het Bentley Entertainment-systeem kunt u inhoud\nzien en horen van uw mobiele apparaat verbonden\nvia wifi of van een compatibel apparaat dat is\nverbonden via HDMI of USB.",
   "Menu_Help_Output": "Kies BLUETOOTH om een Bluetooth-hoofdtelefoon\nte verbinden of druk op de knop audio delen om audio-\nuitvoer naar de autoluidsprekers te sturen.Audio is\nook beschikbaar via een bedrade hoofdtelefoon.",
-  "Menu_Help_Source": "Kies &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BRON&lt;/span&gt; om uw gewenste inhoud te kiezen.\nU kunt inhoud van externe providers bekijken door\nhet kiezen van de service in de getoonde lijst.\nDe browser kan in dit menu ook worden gereset.",
+  "Menu_Help_Source": "Kies <span id=\"text_Highlight\">BRON</span> om uw gewenste inhoud te kiezen.\nU kunt inhoud van externe providers bekijken door\nhet kiezen van de service in de getoonde lijst.\nDe browser kan in dit menu ook worden gereset.",
   "Menu_Help_USB": "Media kan worden afgespeeld via een compatibel\napparaat verbonden via USB wanneer de Bentley\nEntertainment besturings-app wordt gebruikt.",
   "Menu_Install_Update": "Update installeren",
   "Menu_Settings_Acoustic_Feedback": "Akoestische feedback",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Kies &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; om een Bluetooth-hoofdtelefoon\nte verbinden.\n\nAudio is ook beschikbaar via een\nbedrade hoofdtelefoon.",
-  "Menu_Help_Output_SOP2": "Kies &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; om een Bluetooth-hoofdtelefoon\nte verbinden of druk op de knop audio delen om audio-\nuitvoer naar de autoluidsprekers te sturen.Audio is\nook beschikbaar via een bedrade hoofdtelefoon.",
+  "Menu_Help_Output_SOP1": "Kies <span id=\"text_Highlight\">BLUETOOTH</span> om een Bluetooth-hoofdtelefoon\nte verbinden.\n\nAudio is ook beschikbaar via een\nbedrade hoofdtelefoon.",
+  "Menu_Help_Output_SOP2": "Kies <span id=\"text_Highlight\">BLUETOOTH</span> om een Bluetooth-hoofdtelefoon\nte verbinden of druk op de knop audio delen om audio-\nuitvoer naar de autoluidsprekers te sturen.Audio is\nook beschikbaar via een bedrade hoofdtelefoon.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
