--- a/i18n/nn_NO.json
+++ b/i18n/nn_NO.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Avbryt nedlasting",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Velg &lt;span id=\\&quot;text_highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; for å vise innhold aktuelt vist\npå følgesskjermen. Informasjon: Ved valg av\nCrosslink når lyddeling er aktiv, er lyd- og volum-\nkontroller utilgjengelig.",
+  "Menu_Help_Crosslink": "Velg <span id=\"text_highlight\">CROSSLINK</span> for å vise innhold aktuelt vist\npå følgesskjermen. Informasjon: Ved valg av\nCrosslink når lyddeling er aktiv, er lyd- og volum-\nkontroller utilgjengelig.",
   "Menu_Help_HDMI": "Innhold kan avspilles fra en HDMI-kilde\nnår en kompatibel enhet er tilkoblet.\nInformasjon: Hvis ikke noe innhold avspilles å\nHDMI-enheten når den er valgt,\nvil skjermen vises blank.",
-  "Menu_Help_Input": "Velg &lt;span id=\\&quot;text_highlight\\&quot;&gt;INNGANG&lt;/span&gt; for å koble til et Wi-Fi-nettverk.\nDette gjør at du kan streame innhold gjennom\neksterne leverandører eller opprette en tilkobling\nmed enheten for å dele innhold.",
+  "Menu_Help_Input": "Velg <span id=\"text_highlight\">INNGANG</span> for å koble til et Wi-Fi-nettverk.\nDette gjør at du kan streame innhold gjennom\neksterne leverandører eller opprette en tilkobling\nmed enheten for å dele innhold.",
   "Menu_Help_Intro": "Bentley Entertainment System gjør at du kan vise\nog høre innhold fra mobilenheten din som er tilkoblet\nvia Wi-Fi eller fra en kompatibel enhet som er tilkoblet\ngjennom HDMI eller USB.",
   "Menu_Help_Output": "Velg BLUETOOTH for å koble til\nBluetooth-hodetelefoner eller trykk på\nlyddelingsknappen for å sende lydutgang\ntil bilens høyttalere. Lyd er også tilgjengelig\ngjennom kablede hodetelefoner.",
-  "Menu_Help_Source": "Velg &lt;span id=\\&quot;text_highlight\\&quot;&gt;KILDE&lt;/span&gt; for å velge ønsket innhold.\nDu kan vise innhold fra eksterne leverandører\nved å velge tjenesten fra listen som vises.\nNettleseren kan også tilbakestilles i denne menyen.",
+  "Menu_Help_Source": "Velg <span id=\"text_highlight\">KILDE</span> for å velge ønsket innhold.\nDu kan vise innhold fra eksterne leverandører\nved å velge tjenesten fra listen som vises.\nNettleseren kan også tilbakestilles i denne menyen.",
   "Menu_Help_USB": "Medier kan avspilles gjennom kompatible enheter\nsom er koblet til via USB ved bruk av\nBentley Entertainment Control-appen.",
   "Menu_Install_Update": "Installer oppdatering",
   "Menu_Settings_Acoustic_Feedback": "Berøringslyd",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Velg &lt;span id=\\&quot;text_highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; for å koble til\nBluetooth-hodetelefoner.\n\nLyd er også tilgjengelig\ngjennom kablede hodetelefoner.",
-  "Menu_Help_Output_SOP2": "Velg &lt;span id=\\&quot;text_highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; for å koble til\nBluetooth-hodetelefoner eller trykk på\nlyddelingsknappen for å sende lydutgang\ntil bilens høyttalere. Lyd er også tilgjengelig\ngjennom kablede hodetelefoner.",
+  "Menu_Help_Output_SOP1": "Velg <span id=\"text_highlight\">BLUETOOTH</span> for å koble til\nBluetooth-hodetelefoner.\n\nLyd er også tilgjengelig\ngjennom kablede hodetelefoner.",
+  "Menu_Help_Output_SOP2": "Velg <span id=\"text_highlight\">BLUETOOTH</span> for å koble til\nBluetooth-hodetelefoner eller trykk på\nlyddelingsknappen for å sende lydutgang\ntil bilens høyttalere. Lyd er også tilgjengelig\ngjennom kablede hodetelefoner.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
