--- a/i18n/pl_PL.json
+++ b/i18n/pl_PL.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Anuluj pobieranie",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Wybierz &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt;, aby wyświetlić treść aktualnie\nwyświetlaną na ekranie osoby towarzyszącej.\nInformacja: w przypadku wybrania opcji łącze,\ngdy aktywne jest współdzielenie dźwięku,\nregulacja audio i głośności są niedostępne.",
+  "Menu_Help_Crosslink": "Wybierz <span id=\"text_Highlight\">CROSSLINK</span>, aby wyświetlić treść aktualnie\nwyświetlaną na ekranie osoby towarzyszącej.\nInformacja: w przypadku wybrania opcji łącze,\ngdy aktywne jest współdzielenie dźwięku,\nregulacja audio i głośności są niedostępne.",
   "Menu_Help_HDMI": "Treść może być odtwarzana ze źródła HDMI,\ngdy podłączone jest kompatybilne urządzenie.\nInformacja: jeśli po wybraniu tej opcji w\nurządzeniu HDMI nie jest odtwarzana żadna\ntreść, ekran będzie pusty.",
-  "Menu_Help_Input": "Wybierz &lt;span id=\\&quot;text_Highlight\\&quot;&gt;WEJŚCIE&lt;/span&gt;, aby połączyć się z siecią Wi-Fi.\nPozwala to na strumieniowe przesyłanie treści za\npośred. zewnętrznych dostawców lub nawiązanie\npołączenia z urządzeniem w celu udostępnienia treści.",
+  "Menu_Help_Input": "Wybierz <span id=\"text_Highlight\">WEJŚCIE</span>, aby połączyć się z siecią Wi-Fi.\nPozwala to na strumieniowe przesyłanie treści za\npośred. zewnętrznych dostawców lub nawiązanie\npołączenia z urządzeniem w celu udostępnienia treści.",
   "Menu_Help_Intro": "System Bentley Entertainment umożliwia oglądanie\ni słuchanie treści z urządzenia mobilnego podłączonego\nprzez Wi-Fi lub z kompatybilnego urządzenia\npodłączonego przez HDMI lub USB.",
   "Menu_Help_Output": "Wybierz BLUETOOTH, aby podłączyć słuchawki\nBluetooth, lub naciśnij przycisk udostępniania dźwięku,\naby wysłać sygnał audio do głośników samochodu.\nDźwięk jest też dostępny przez słuchawki przewodowe.",
-  "Menu_Help_Source": "Wybierz &lt;span id=\\&quot;text_Highlight\\&quot;&gt;SOURCE&lt;/span&gt;, aby wybrać żądaną treść.\nMożesz przeglądać treść od zewnętrznych dostawców,\nwybierając usługę z wyświetlonej listy.\nW tym menu możesz też zresetować przeglądarkę.",
+  "Menu_Help_Source": "Wybierz <span id=\"text_Highlight\">SOURCE</span>, aby wybrać żądaną treść.\nMożesz przeglądać treść od zewnętrznych dostawców,\nwybierając usługę z wyświetlonej listy.\nW tym menu możesz też zresetować przeglądarkę.",
   "Menu_Help_USB": "Podczas korzystania z aplikacji Bentley Entertainment\nControl media można odtwarzać za pomocą\nkompatybilnego urządzenia podłączonego przez USB.",
   "Menu_Install_Update": "Zainstaluj aktualizację",
   "Menu_Settings_Acoustic_Feedback": "Sygnał dźwiękowy",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Wybierz &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;, aby podłączyć słuchawki\nBluetooth.\n\nDźwięk jest też dostępny przez słuchawki przewodowe.",
-  "Menu_Help_Output_SOP2": "Wybierz &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;, aby podłączyć słuchawki\nBluetooth, lub naciśnij przycisk udostępniania dźwięku,\naby wysłać sygnał audio do głośników samochodu.\nDźwięk jest też dostępny przez słuchawki przewodowe.",
+  "Menu_Help_Output_SOP1": "Wybierz <span id=\"text_Highlight\">BLUETOOTH</span>, aby podłączyć słuchawki\nBluetooth.\n\nDźwięk jest też dostępny przez słuchawki przewodowe.",
+  "Menu_Help_Output_SOP2": "Wybierz <span id=\"text_Highlight\">BLUETOOTH</span>, aby podłączyć słuchawki\nBluetooth, lub naciśnij przycisk udostępniania dźwięku,\naby wysłać sygnał audio do głośników samochodu.\nDźwięk jest też dostępny przez słuchawki przewodowe.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
