--- a/i18n/pt_BR.json
+++ b/i18n/pt_BR.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Cancelar download",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Selecione &lt;span id=\\&quot;text_highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; para ver o conteúdo\natual da tela auxiliar. Nota: os controles de áudio\ne volume estarão indisponíveis se Crosslink for\nselecionado com o compartilhamento de áudio ativo.",
+  "Menu_Help_Crosslink": "Selecione <span id=\"text_highlight\">CROSSLINK</span> para ver o conteúdo\natual da tela auxiliar. Nota: os controles de áudio\ne volume estarão indisponíveis se Crosslink for\nselecionado com o compartilhamento de áudio ativo.",
   "Menu_Help_HDMI": "Reproduza conteúdo de uma fonte HDMI\nquando houver um dispositivo compatível conectado.\nNota: caso não haja conteúdo em reprodução\nno dispositivo HDMI selecionado, a tela ficará\nem branco.",
-  "Menu_Help_Input": "Selecione &lt;span id=\\&quot;text_highlight\\&quot;&gt;ENTRADA&lt;/span&gt; para se conectar\na uma rede Wi-Fi e acessar conteúdo externo\npor streaming ou compartilhar conteúdo\nde seu dispositivo conectado.",
+  "Menu_Help_Input": "Selecione <span id=\"text_highlight\">ENTRADA</span> para se conectar\na uma rede Wi-Fi e acessar conteúdo externo\npor streaming ou compartilhar conteúdo\nde seu dispositivo conectado.",
   "Menu_Help_Intro": "O Bentley Entertainment System permite ver\ne escutar conteúdos do dispositivo Wi-Fi conectado\nou de um dispositivo compatível conectado\npor HDMI ou USB.",
   "Menu_Help_Output": "Selecione BLUETOOTH para conectar fones Bluetooth\nou pressione o botão de compartilhamento de áudio\npara enviar a saída de áudio para os alto-falantes.\nÁudio também disponível por meio de fones sem fio.",
-  "Menu_Help_Source": "Selecione &lt;span id=\\&quot;text_highlight\\&quot;&gt;FONTE&lt;/span&gt; para escolher o conteúdo.\nVeja conteúdos de provedores externos\nselecionando o serviço na lista mostrada.\nNeste menu você também pode reiniciar o navegador.",
+  "Menu_Help_Source": "Selecione <span id=\"text_highlight\">FONTE</span> para escolher o conteúdo.\nVeja conteúdos de provedores externos\nselecionando o serviço na lista mostrada.\nNeste menu você também pode reiniciar o navegador.",
   "Menu_Help_USB": "Ao usar o aplicativo Bentley Entertainment Control,\nconecte dispositivo USB compatível\npara reproduzir mídia.",
   "Menu_Install_Update": "Instalar atualização",
   "Menu_Settings_Acoustic_Feedback": "Retorno acústico",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Selecione &lt;span id=\\&quot;text_highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; para conectar fones Bluetooth.\n\nÁudio também disponível por meio de fones sem fio.",
-  "Menu_Help_Output_SOP2": "Selecione &lt;span id=\\&quot;text_highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; para conectar fones Bluetooth\nou pressione o botão de compartilhamento de áudio\npara enviar a saída de áudio para os alto-falantes.\nÁudio também disponível por meio de fones sem fio.",
+  "Menu_Help_Output_SOP1": "Selecione <span id=\"text_highlight\">BLUETOOTH</span> para conectar fones Bluetooth.\n\nÁudio também disponível por meio de fones sem fio.",
+  "Menu_Help_Output_SOP2": "Selecione <span id=\"text_highlight\">BLUETOOTH</span> para conectar fones Bluetooth\nou pressione o botão de compartilhamento de áudio\npara enviar a saída de áudio para os alto-falantes.\nÁudio também disponível por meio de fones sem fio.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
