--- a/i18n/pt_PT.json
+++ b/i18n/pt_PT.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Cancelar o descarregamento",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Selecione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;LIGAÇÃO CRUZADA&lt;/span&gt; para visualizar o\nconteúdo que está a ser exibido no ecrã ao lado.\nNota: se selecionar a função ligação cruzada\ndurante a partilha de áudio ativa, os controlos\nde áudio e volume estarão indisponíveis.",
+  "Menu_Help_Crosslink": "Selecione <span id=\"text_Highlight\">LIGAÇÃO CRUZADA</span> para visualizar o\nconteúdo que está a ser exibido no ecrã ao lado.\nNota: se selecionar a função ligação cruzada\ndurante a partilha de áudio ativa, os controlos\nde áudio e volume estarão indisponíveis.",
   "Menu_Help_HDMI": "O conteúdo pode ser reproduzido a partir de uma\nfonte HDMI, desde que esteja conectado um\ndispositivo compatível. Nota: se não estiver a ser\nreproduzido conteúdo no dispositivo HDMI quando\nselecionado, o ecrã aparecerá em branco.",
-  "Menu_Help_Input": "Selecione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;ENTRADA&lt;/span&gt; para conectar a uma rede WiFi.\nIsto permite-lhe transmitir conteúdo através de\nprovedores externos ou estabelecer uma ligação\nao seu dispositivo para partilhar conteúdo.",
+  "Menu_Help_Input": "Selecione <span id=\"text_Highlight\">ENTRADA</span> para conectar a uma rede WiFi.\nIsto permite-lhe transmitir conteúdo através de\nprovedores externos ou estabelecer uma ligação\nao seu dispositivo para partilhar conteúdo.",
   "Menu_Help_Intro": "O Sistema de Entretenimento Bentley permite-lhe ver\ne ouvir conteúdo do seu dispositivo móvel conectado\nvia WiFi ou de um dispositivo compatível conectado\natravés de HDMI ou USB.",
   "Menu_Help_Output": "Selecione BLUETOOTH para conectar auscultadores\nBluetooth ou prima o botão partilha de áudio para\nenviar saída de áudio para os altifalantes do veículo.\nO áudio está ainda disponível através de auscultadores\ncom fio.",
-  "Menu_Help_Source": "Selecione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;FONTE&lt;/sapn&gt; para eleger o conteúdo desejado.\nPode visualizar conteúdo de provedores externos,\nselecionando, para isso, o serviço da lista exibida.\nO navegador pode também ser reposto neste menu.",
+  "Menu_Help_Source": "Selecione <span id=\"text_Highlight\">FONTE</sapn> para eleger o conteúdo desejado.\nPode visualizar conteúdo de provedores externos,\nselecionando, para isso, o serviço da lista exibida.\nO navegador pode também ser reposto neste menu.",
   "Menu_Help_USB": "Os média podem ser reproduzidos através de um\ndispositivo compatível conectado via USB durante\no uso da aplicação Controlo de Entretenimento\nBentley.",
   "Menu_Install_Update": "Instalar atualização",
   "Menu_Settings_Acoustic_Feedback": "Feedback acústico",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Selecione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; para conectar auscultadores\nBluetooth.\n\nO áudio está ainda disponível através de auscultadores\ncom fio.",
-  "Menu_Help_Output_SOP2": "Selecione &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; para conectar auscultadores\nBluetooth ou prima o botão partilha de áudio para\nenviar saída de áudio para os altifalantes do veículo.\nO áudio está ainda disponível através de auscultadores\ncom fio.",
+  "Menu_Help_Output_SOP1": "Selecione <span id=\"text_Highlight\">BLUETOOTH</span> para conectar auscultadores\nBluetooth.\n\nO áudio está ainda disponível através de auscultadores\ncom fio.",
+  "Menu_Help_Output_SOP2": "Selecione <span id=\"text_Highlight\">BLUETOOTH</span> para conectar auscultadores\nBluetooth ou prima o botão partilha de áudio para\nenviar saída de áudio para os altifalantes do veículo.\nO áudio está ainda disponível através de auscultadores\ncom fio.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
