--- a/i18n/ro_RO.json
+++ b/i18n/ro_RO.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Anulare descărcare",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Selectați &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; pentru a vedea conținutul afișat\npe ecranul asociat. Observație: dacă selectați Crosslink\ncând partajarea audio e activă, comenzile audio\nși de volum sunt indisponibile.",
+  "Menu_Help_Crosslink": "Selectați <span id=\"text_Highlight\">CROSSLINK</span> pentru a vedea conținutul afișat\npe ecranul asociat. Observație: dacă selectați Crosslink\ncând partajarea audio e activă, comenzile audio\nși de volum sunt indisponibile.",
   "Menu_Help_HDMI": "Conținutul poate fi redat de la o sursă HDMI\ncând e conectat un dispozitiv compatibil.\nObservație: Dacă nu se redă conținut pe dispozitivul\nHDMI selectat, ecranul nu va afișa nimic.",
-  "Menu_Help_Input": "Selectați &lt;span id=\\&quot;text_Highlight\\&quot;&gt;INTRARE&lt;/span&gt; pentru conectarea la rețeaua Wi-Fi.\nÎn acest fel puteți accesa conținut de la furnizori\nexterni sau puteți realiza o conexiune\ncu dispozitivul dvs. pentru a partaja conținut.",
+  "Menu_Help_Input": "Selectați <span id=\"text_Highlight\">INTRARE</span> pentru conectarea la rețeaua Wi-Fi.\nÎn acest fel puteți accesa conținut de la furnizori\nexterni sau puteți realiza o conexiune\ncu dispozitivul dvs. pentru a partaja conținut.",
   "Menu_Help_Intro": "Bentley Entertainment System vă permite să vedeți\nși să auziți conținut de pe dispozitivul mobil conectat\nprin Wi-Fi sau de la un dispozitiv compatibil conectat\nprin HDMI sau USB.",
   "Menu_Help_Output": "Selectați BLUETOOTH pentru a conecta căștile\nBluetooth sau apăsați pe butonul de partajare\naudio ca să trimiteți semnal audio la difuzoarele\nvehiculului. Semnalul audio e disponibil doar prin\ndifuzoarele cu fir.",
-  "Menu_Help_Source": "Selectați &lt;span id=\\&quot;text_Highlight\\&quot;&gt;SOURCE&lt;/span&gt; pentru a alege conținutul dorit.\nPuteț vedea conținut de la furnizori externi\ndacă selectați serviciul din lista afișată.\nBrowser-ul poate fi resetat în acest meniu.",
+  "Menu_Help_Source": "Selectați <span id=\"text_Highlight\">SOURCE</span> pentru a alege conținutul dorit.\nPuteț vedea conținut de la furnizori externi\ndacă selectați serviciul din lista afișată.\nBrowser-ul poate fi resetat în acest meniu.",
   "Menu_Help_USB": "Conținutul media poate fi redat printr-un dispozitiv\ncompatibil conectat prin USB când folosiți\naplicația Bentley Entertainment Control.",
   "Menu_Install_Update": "Instalare actualizare",
   "Menu_Settings_Acoustic_Feedback": "Confirmare sonoră",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Selectați &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; pentru a conecta căștile\nBluetooth.\n\nSemnalul audio e disponibil doar prin\ndifuzoarele cu fir.",
-  "Menu_Help_Output_SOP2": "Selectați &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; pentru a conecta căștile\nBluetooth sau apăsați pe butonul de partajare\naudio ca să trimiteți semnal audio la difuzoarele\nvehiculului. Semnalul audio e disponibil doar prin\ndifuzoarele cu fir.",
+  "Menu_Help_Output_SOP1": "Selectați <span id=\"text_Highlight\">BLUETOOTH</span> pentru a conecta căștile\nBluetooth.\n\nSemnalul audio e disponibil doar prin\ndifuzoarele cu fir.",
+  "Menu_Help_Output_SOP2": "Selectați <span id=\"text_Highlight\">BLUETOOTH</span> pentru a conecta căștile\nBluetooth sau apăsați pe butonul de partajare\naudio ca să trimiteți semnal audio la difuzoarele\nvehiculului. Semnalul audio e disponibil doar prin\ndifuzoarele cu fir.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
