--- a/i18n/ru_RU.json
+++ b/i18n/ru_RU.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Отменить загрузку",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Выберите &lt;span id=\\&quot;text_highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; для просмотра контента\nна вспом. экране. Примечание: При выборе\nкросс-канала во время совместного доступа к\nаудио управление аудио и громкостью недоступно.",
+  "Menu_Help_Crosslink": "Выберите <span id=\"text_highlight\">CROSSLINK</span> для просмотра контента\nна вспом. экране. Примечание: При выборе\nкросс-канала во время совместного доступа к\nаудио управление аудио и громкостью недоступно.",
   "Menu_Help_HDMI": "Можно воспроизводить контент с источника HDMI\nпри подключении совместимое устройства.\nПримечание: Когда контент не воспроизв. на\nустройстве HDMI, отображается пустой экран.",
-  "Menu_Help_Input": "Выберите &lt;span id=\\&quot;text_highlight\\&quot;&gt;INPUT&lt;/span&gt;, чтобы подключения к сети Wi-Fi.\nВы сможете включить потоковый контент через\nвнешних поставщиков либо установить подключ.\nс вашим устройством для совм. доступа к контенту.",
+  "Menu_Help_Input": "Выберите <span id=\"text_highlight\">INPUT</span>, чтобы подключения к сети Wi-Fi.\nВы сможете включить потоковый контент через\nвнешних поставщиков либо установить подключ.\nс вашим устройством для совм. доступа к контенту.",
   "Menu_Help_Intro": "Системе Bentley Entertainment позволяет\nпросматривать и прослушивать контент с моб. устр.\nчерез Wi-Fi либо с совместимого устройства\nчерез HDMI или USB.",
   "Menu_Help_Output": "Выберите BLUETOOTH, чтобы подключ. гарнит.\nBluetooth, или нажмите кнопку совм. доступа\nк аудио для вывода аудио на динамики авто.\nАудио также доступно через проводные гарнит.",
-  "Menu_Help_Source": "Выберите &lt;span id=\\&quot;text_highlight\\&quot;&gt;SOURCE&lt;/span&gt;, чтобы выбрать контент.\nМожно просматривать контент от внешние\nпоставщиков с помощью сервиса из отображ. списка.\nВ этом меню также доступен сброс браузера.",
+  "Menu_Help_Source": "Выберите <span id=\"text_highlight\">SOURCE</span>, чтобы выбрать контент.\nМожно просматривать контент от внешние\nпоставщиков с помощью сервиса из отображ. списка.\nВ этом меню также доступен сброс браузера.",
   "Menu_Help_USB": "Можно воспроизводить носители через\nсовместимое USB-устройство при использовании\nприложения Bentley Entertainment Control.",
   "Menu_Install_Update": "Установить обновление",
   "Menu_Settings_Acoustic_Feedback": "Акустическая обратная связь",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Выберите &lt;span id=\\&quot;text_highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;, чтобы подключ. гарнит.\nBluetooth, или нажмите кнопку совм. доступа\nк аудио для вывода аудио на динамики авто.\nАудио также доступно через проводные гарнит.",
-  "Menu_Help_Output_SOP2": "Выберите &lt;span id=\\&quot;text_highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;, чтобы подключ. гарнит.\nBluetooth, или нажмите кнопку совм. доступа\nк аудио для вывода аудио на динамики авто.\nАудио также доступно через проводные гарнит.",
+  "Menu_Help_Output_SOP1": "Выберите <span id=\"text_highlight\">BLUETOOTH</span>, чтобы подключ. гарнит.\nBluetooth, или нажмите кнопку совм. доступа\nк аудио для вывода аудио на динамики авто.\nАудио также доступно через проводные гарнит.",
+  "Menu_Help_Output_SOP2": "Выберите <span id=\"text_highlight\">BLUETOOTH</span>, чтобы подключ. гарнит.\nBluetooth, или нажмите кнопку совм. доступа\nк аудио для вывода аудио на динамики авто.\nАудио также доступно через проводные гарнит.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
