--- a/i18n/sv_SE.json
+++ b/i18n/sv_SE.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Avbryt nerladdning",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Välj &lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; för att se innehåll som för\nnärvarande visas på en sidoskärm. Observera:\nom du väljer Crosslink, när ljdudelning är aktiv,\när ljud och volymkontroller inte tillgängliga.",
+  "Menu_Help_Crosslink": "Välj <span id=\"text_Highlight\">CROSSLINK</span> för att se innehåll som för\nnärvarande visas på en sidoskärm. Observera:\nom du väljer Crosslink, när ljdudelning är aktiv,\när ljud och volymkontroller inte tillgängliga.",
   "Menu_Help_HDMI": "Innehåll kan också spelas upp från en HDMI-källa\nnär en kompatibel enhet anslutes. Observera: Om\ninget innehåll spelas upp på HDMI-enheten när denna\nhar valts, blir skärmen tom.",
-  "Menu_Help_Input": "Välj &lt;span id=\\&quot;text_Highlight\\&quot;&gt;INPUT&lt;/span&gt; för att ansluta till ett Wi-Fi nätverk.\nDetta gör det möjligt för dig att strömma innehåll\ngenom externa leverantörer eller till en etablerad\nanslutning med din enhet för att dela innehåll.",
+  "Menu_Help_Input": "Välj <span id=\"text_Highlight\">INPUT</span> för att ansluta till ett Wi-Fi nätverk.\nDetta gör det möjligt för dig att strömma innehåll\ngenom externa leverantörer eller till en etablerad\nanslutning med din enhet för att dela innehåll.",
   "Menu_Help_Intro": "Bentley Entertainment System låter dig se och höra\ninnehållet från din mobilenhet som är ansluten\nvia Wi-Fi eller från en kompatibel enhet som är\nansluten via HDMI eller USB.",
   "Menu_Help_Output": "Välj BLUETOOTH för att ansluta Bluetooth hörlurar\neller tryck på knappen för ljuddelning för att skicka ljud\ntill högtalarna i bilen. Ljud går även att få genom\nkabelasnlutna hörlurar.",
-  "Menu_Help_Source": "Välj &lt;span id=\\&quot;text_Highlight\\&quot;&gt;KÄLLA&lt;/span&gt; för att välja önskat innehåll. Du kan avläsa\ninnehållet från externa leverantörer genom att välja\ntjänsten ur en förteckning som visas. Webbläsaren kan\nockså återställas i den här menyn.",
+  "Menu_Help_Source": "Välj <span id=\"text_Highlight\">KÄLLA</span> för att välja önskat innehåll. Du kan avläsa\ninnehållet från externa leverantörer genom att välja\ntjänsten ur en förteckning som visas. Webbläsaren kan\nockså återställas i den här menyn.",
   "Menu_Help_USB": "Media kan spelas upp genom en kompatibel enhet\nsom är ansluten via USB när Bentley Entertainment\nControl app används.",
   "Menu_Install_Update": "Instalera uppodatering",
   "Menu_Settings_Acoustic_Feedback": "Akustisk feedback",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Välj &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; för att ansluta Bluetooth hörlurar.\n\nLjud går även att få genom kabelasnlutna hörlurar.",
-  "Menu_Help_Output_SOP2": "Välj &lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; för att ansluta Bluetooth hörlurar\neller tryck på knappen för ljuddelning för att skicka ljud\ntill högtalarna i bilen. Ljud går även att få genom\nkabelasnlutna hörlurar.",
+  "Menu_Help_Output_SOP1": "Välj <span id=\"text_Highlight\">BLUETOOTH</span> för att ansluta Bluetooth hörlurar.\n\nLjud går även att få genom kabelasnlutna hörlurar.",
+  "Menu_Help_Output_SOP2": "Välj <span id=\"text_Highlight\">BLUETOOTH</span> för att ansluta Bluetooth hörlurar\neller tryck på knappen för ljuddelning för att skicka ljud\ntill högtalarna i bilen. Ljud går även att få genom\nkabelasnlutna hörlurar.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
