--- a/i18n/tr_TR.json
+++ b/i18n/tr_TR.json
@@ -98,7 +98,7 @@
   "IVI_Sync_Complete": "Ses senkronizasyonu\ntamamlandı.",
   "IVI_Sync_Error": "Bir hata oluştu.\nSes senkronize edilemiyor.\nLütfen daha sonra tekrar deneyin.",
   "IVI_Sync_In_Progress": "Senkron...\n{0}%",
-  "IVI_Sync_Main_Text": "Bilgi-eğlence sisteminde\nekran adını Bluetooth\nolarak seçin.\nSesi kontrol edin ve\narka plan gürültüsünü azaltın.\nSistem hazır olduğunda\nBAŞLAT&apos;a basın.",
+  "IVI_Sync_Main_Text": "Bilgi-eğlence sisteminde\nekran adını Bluetooth\nolarak seçin.\nSesi kontrol edin ve\narka plan gürültüsünü azaltın.\nSistem hazır olduğunda\nBAŞLAT'a basın.",
   "Install_Active_Headline": "Not",
   "Install_Active_Main_Text": "Güncelleme yüklemesi\n%{0} tamamlandı.\n\nLütfen güncelleme tamamlanıncaya\nkadar aracın açık olduğundan emin olun.\n\nYükleme tamamlandığında\nsistem yeniden başlatılacaktır.",
   "Install_Available_Headline": "Yazılım güncellemesi",
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "İndirmeyi iptal et",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Şu anda eş ekranda gösterilen içeriği görüntülemek için\n&lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt;&apos;i seçin. Not: ses paylaşımı etkin\ndurumdayken çapraz bağlantı seçilirse, ses ve\nses kontrolleri kullanılamaz.",
+  "Menu_Help_Crosslink": "Şu anda eş ekranda gösterilen içeriği görüntülemek için\n<span id=\"text_Highlight\">CROSSLINK</span>'i seçin. Not: ses paylaşımı etkin\ndurumdayken çapraz bağlantı seçilirse, ses ve\nses kontrolleri kullanılamaz.",
   "Menu_Help_HDMI": "Uyumlu bir cihaz bağlandığında\nbir HDMI kaynağındaki içerik de oynatılabilir.\nNot: seçildiği halde HDMI cihazında herhangi\nbir içerik oynatılmıyorsa, ekran boş görünecektir.",
-  "Menu_Help_Input": "Bir &lt;span id=\\&quot;text_Highlight\\&quot;&gt;Wi-Fi&lt;/span&gt; ağına bağlanmak için GİRİŞ&apos;u seçin.\nBu sayede, harici sağlayıcılar üzerindeki\niçeriği oynatabilir veya içerik paylaşmak için\ncihazınızla bağlantı kurabilirsiniz.",
+  "Menu_Help_Input": "Bir <span id=\"text_Highlight\">Wi-Fi</span> ağına bağlanmak için GİRİŞ'u seçin.\nBu sayede, harici sağlayıcılar üzerindeki\niçeriği oynatabilir veya içerik paylaşmak için\ncihazınızla bağlantı kurabilirsiniz.",
   "Menu_Help_Intro": "Bentley Eğlence Sistemi, Wi-Fi ile bağlı mobil\ncihazınızdan ya da HDMI veya USB üzerinden\nbağlı uyumlu bir cihazdan içerik görüntülemenizi\nve dinlemenizi sağlar.",
   "Menu_Help_Output": "Bluetooth kulaklıkları bağlamak için BLUETOOTH'u\nseçin veya araç hoparlörlerinden ses çıkışı için\nses paylaşımı düğmesine basın.\nSes, kablolu kulaklıklarla da dinlenebilir.",
-  "Menu_Help_Source": "İstediğiniz içeriği seçmek için &lt;span id=\\&quot;text_Highlight\\&quot;&gt;SOURCE&lt;/span&gt;&apos;u seçin.\nAçılan listeden servisi seçerek harici\nsağlayıcılar üzerindeki içeriği görüntüleyebilirsiniz.\nAyrıca bu menüden tarayıcı sıfırlanabilir.",
+  "Menu_Help_Source": "İstediğiniz içeriği seçmek için <span id=\"text_Highlight\">SOURCE</span>'u seçin.\nAçılan listeden servisi seçerek harici\nsağlayıcılar üzerindeki içeriği görüntüleyebilirsiniz.\nAyrıca bu menüden tarayıcı sıfırlanabilir.",
   "Menu_Help_USB": "Bentley Eğlence Kontrolü uygulaması\nkullanılırken USB üzerinden bağlanan\nuyumlu bir cihaz üzerindeki medya oynatılabilir.",
   "Menu_Install_Update": "Güncellemeyi yükle",
   "Menu_Settings_Acoustic_Feedback": "Sesli geri bildirim",
@@ -270,8 +270,8 @@
   "Update_Unavailable_Headline": "Yazılım güncellemesi",
   "Update_Unavailable_Main_Text": "Güncellemeler kontrol edilemiyor.\nLütfen daha sonra tekrar deneyin.",
   "Use_Extension_Headline": "Not",
-  "Use_Extension_Main_Text_PL": "Bentley Eğlence Sistemi\n{0} saniye içinde kapanacak.\nKullanım süresini uzatmak için Tamam&apos;a basın.",
-  "Use_Extension_Main_Text_SG": "Bentley Eğlence Sistemi\n{0} saniye içinde kapanacak.\nKullanım süresini uzatmak için Tamam&apos;a basın.",
+  "Use_Extension_Main_Text_PL": "Bentley Eğlence Sistemi\n{0} saniye içinde kapanacak.\nKullanım süresini uzatmak için Tamam'a basın.",
+  "Use_Extension_Main_Text_SG": "Bentley Eğlence Sistemi\n{0} saniye içinde kapanacak.\nKullanım süresini uzatmak için Tamam'a basın.",
   "Wi-Fi_Status": "WI-FI",
   "WiFi_Headline": "Wi-Fi",
   "acoustic": "Acoustic",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "&lt;span id=\\&quot;text_Highlight\\&quot;&gt;Bluetooth&lt;/span&gt; kulaklıkları bağlamak için BLUETOOTH&apos;u\nseçin veya araç hoparlörlerinden ses çıkışı için\nses paylaşımı düğmesine basın.\nSes, kablolu kulaklıklarla da dinlenebilir.",
-  "Menu_Help_Output_SOP2": "&lt;span id=\\&quot;text_Highlight\\&quot;&gt;Bluetooth&lt;/span&gt; kulaklıkları bağlamak için BLUETOOTH&apos;u\nseçin veya araç hoparlörlerinden ses çıkışı için\nses paylaşımı düğmesine basın.\nSes, kablolu kulaklıklarla da dinlenebilir.",
+  "Menu_Help_Output_SOP1": "<span id=\"text_Highlight\">Bluetooth</span> kulaklıkları bağlamak için BLUETOOTH'u\nseçin veya araç hoparlörlerinden ses çıkışı için\nses paylaşımı düğmesine basın.\nSes, kablolu kulaklıklarla da dinlenebilir.",
+  "Menu_Help_Output_SOP2": "<span id=\"text_Highlight\">Bluetooth</span> kulaklıkları bağlamak için BLUETOOTH'u\nseçin veya araç hoparlörlerinden ses çıkışı için\nses paylaşımı düğmesine basın.\nSes, kablolu kulaklıklarla da dinlenebilir.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
