--- a/i18n/zh_CN.json
+++ b/i18n/zh_CN.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "取消下载",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "选择 &lt;span id=\\&quot;text_highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; 以查看配套屏幕上\n当前显示的内容。注意：如果在进行音频\n共享时选择 Crosslink，音频和音量\n控件不可用。",
+  "Menu_Help_Crosslink": "选择 <span id=\"text_highlight\">CROSSLINK</span> 以查看配套屏幕上\n当前显示的内容。注意：如果在进行音频\n共享时选择 Crosslink，音频和音量\n控件不可用。",
   "Menu_Help_HDMI": "连接兼容设备时\n可以播放 HDMI 来源内容。\n注意：如果未播放所选的 HDMI 设备\n上的内容，屏幕将显示空白。",
-  "Menu_Help_Input": "选择&lt;span id=\\&quot;text_highlight\\&quot;&gt;“输入”&lt;/span&gt;以连接到 Wi-Fi 网络。\n这样，您可以通过外部\n提供商传输内容或与设备\n建立连接以共享内容。",
+  "Menu_Help_Input": "选择<span id=\"text_highlight\">“输入”</span>以连接到 Wi-Fi 网络。\n这样，您可以通过外部\n提供商传输内容或与设备\n建立连接以共享内容。",
   "Menu_Help_Intro": "Bentley 娱乐系统可用于查看和播放\n通过 Wi-Fi 连接的移动设备中\n的内容或通过 HDMI 或 USB\n连接的兼容设备中的内容。",
   "Menu_Help_Output": "选择“蓝牙”连接蓝牙耳机\n或按音频共享按钮，\n将音频输出发送到汽车扬声器。\n也可通过有线耳机收听音频。",
-  "Menu_Help_Source": "选择&lt;span id=\\&quot;text_highlight\\&quot;&gt;“来源”&lt;/span&gt;以选择所需的内容。\n您可以从显示的列表中选择服务，\n查看来自外部提供商的内容。\n浏览器也可以在此菜单中重置。",
+  "Menu_Help_Source": "选择<span id=\"text_highlight\">“来源”</span>以选择所需的内容。\n您可以从显示的列表中选择服务，\n查看来自外部提供商的内容。\n浏览器也可以在此菜单中重置。",
   "Menu_Help_USB": "使用 Bentley 娱乐控制应用程序时，\n可以播放通过 USB 连接的\n兼容设备上的媒体。",
   "Menu_Install_Update": "安装更新",
   "Menu_Settings_Acoustic_Feedback": "声音反馈",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "选择&lt;span id=\\&quot;text_highlight\\&quot;&gt;“蓝牙”&lt;/span&gt;连接蓝牙耳机\n或按音频共享按钮，\n将音频输出发送到汽车扬声器。\n也可通过有线耳机收听音频。",
-  "Menu_Help_Output_SOP2": "选择&lt;span id=\\&quot;text_highlight\\&quot;&gt;“蓝牙”&lt;/span&gt;连接蓝牙耳机\n或按音频共享按钮，\n将音频输出发送到汽车扬声器。\n也可通过有线耳机收听音频。",
+  "Menu_Help_Output_SOP1": "选择<span id=\"text_highlight\">“蓝牙”</span>连接蓝牙耳机\n或按音频共享按钮，\n将音频输出发送到汽车扬声器。\n也可通过有线耳机收听音频。",
+  "Menu_Help_Output_SOP2": "选择<span id=\"text_highlight\">“蓝牙”</span>连接蓝牙耳机\n或按音频共享按钮，\n将音频输出发送到汽车扬声器。\n也可通过有线耳机收听音频。",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
