--- a/i18n/zh_HK.json
+++ b/i18n/zh_HK.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "取消下載",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "選擇 &lt;span id=\\&quot;text_Highlight\\&quot;&gt;[交叉鏈結]&lt;/span&gt; 以查看隨附螢幕\n上目前顯示的內容。注意：如果在使用音訊分享\n時選擇交叉鏈結，則音訊和音量控制\n無法使用。",
+  "Menu_Help_Crosslink": "選擇 <span id=\"text_Highlight\">[交叉鏈結]</span> 以查看隨附螢幕\n上目前顯示的內容。注意：如果在使用音訊分享\n時選擇交叉鏈結，則音訊和音量控制\n無法使用。",
   "Menu_Help_HDMI": "連接兼容的裝置後可播放\nHDMI 來源中的內容。\n注意：如果選擇時 HDMI 裝置上\n沒有內容在播放，則螢幕會顯示空白。",
-  "Menu_Help_Input": "選擇 &lt;span id=\\&quot;text_Highlight\\&quot;&gt;[輸入]&lt;/span&gt; 以連接到 Wi-Fi 網絡。\n這可讓您透過外部提供者\n串流內容，或者與您的裝置建立\n連接以分享內容。",
+  "Menu_Help_Input": "選擇 <span id=\"text_Highlight\">[輸入]</span> 以連接到 Wi-Fi 網絡。\n這可讓您透過外部提供者\n串流內容，或者與您的裝置建立\n連接以分享內容。",
   "Menu_Help_Intro": "Bentley Entertainment System 可讓您查看\n及聆聽已透過 Wi-Fi 連接的\n流動裝置或者透過 HDMI 或 USB 連接的\n兼容裝置上的內容。",
   "Menu_Help_Output": "選擇 [藍牙] 以連接藍牙耳機\n或者按下音訊分享按鈕以\n將音訊輸出傳送至汽車揚聲器。\n音訊亦可透過有線耳機使用。",
-  "Menu_Help_Source": "選擇 &lt;span id=\\&quot;text_Highlight\\&quot;&gt;[來源]&lt;/span&gt; 以選擇您想要的內容。\n您可以從下面顯示的清單中選擇服務，\n以查看來自外部提供者的內容。\n瀏覽器亦可在此選單中重設。",
+  "Menu_Help_Source": "選擇 <span id=\"text_Highlight\">[來源]</span> 以選擇您想要的內容。\n您可以從下面顯示的清單中選擇服務，\n以查看來自外部提供者的內容。\n瀏覽器亦可在此選單中重設。",
   "Menu_Help_USB": "在使用 Bentley Entertainment Control app 時，\n可從透過 USB 連接的兼容\n裝置播放媒體。",
   "Menu_Install_Update": "安裝更新",
   "Menu_Settings_Acoustic_Feedback": "音質回應",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "選擇 &lt;span id=\\&quot;text_Highlight\\&quot;&gt;[藍牙]&lt;/span&gt; 以連接藍牙耳機\n或者按下音訊分享按鈕以\n將音訊輸出傳送至汽車揚聲器。\n音訊亦可透過有線耳機使用。",
-  "Menu_Help_Output_SOP2": "選擇 &lt;span id=\\&quot;text_Highlight\\&quot;&gt;[藍牙]&lt;/span&gt; 以連接藍牙耳機\n或者按下音訊分享按鈕以\n將音訊輸出傳送至汽車揚聲器。\n音訊亦可透過有線耳機使用。",
+  "Menu_Help_Output_SOP1": "選擇 <span id=\"text_Highlight\">[藍牙]</span> 以連接藍牙耳機\n或者按下音訊分享按鈕以\n將音訊輸出傳送至汽車揚聲器。\n音訊亦可透過有線耳機使用。",
+  "Menu_Help_Output_SOP2": "選擇 <span id=\"text_Highlight\">[藍牙]</span> 以連接藍牙耳機\n或者按下音訊分享按鈕以\n將音訊輸出傳送至汽車揚聲器。\n音訊亦可透過有線耳機使用。",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
