--- a/i18n/zh_TW.json
+++ b/i18n/zh_TW.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "取消下載",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "選擇 &lt;span id=\\&quot;text_highlight\\&quot;&gt;[交叉連結]&lt;/span&gt; 可檢視隨附螢幕上\n目前顯示的內容。附註：如果\n在使用音訊分享時選擇交叉連結，\n則音訊與音量控制無法使用。",
+  "Menu_Help_Crosslink": "選擇 <span id=\"text_highlight\">[交叉連結]</span> 可檢視隨附螢幕上\n目前顯示的內容。附註：如果\n在使用音訊分享時選擇交叉連結，\n則音訊與音量控制無法使用。",
   "Menu_Help_HDMI": "連線了相容裝置時，可從 HDMI 來源\n播放內容。\n附註：如果選擇時 HDMI 裝置上未播放\n內容，則螢幕顯示空白。",
-  "Menu_Help_Input": "選擇&lt;span id=\\&quot;text_highlight\\&quot;&gt;[輸入]&lt;/span&gt;以連線至 Wi-Fi 網路。\n這可讓您透過外部供應商\n串流內容，或者與您的裝置建立\n連線以分享內容。",
+  "Menu_Help_Input": "選擇<span id=\"text_highlight\">[輸入]</span>以連線至 Wi-Fi 網路。\n這可讓您透過外部供應商\n串流內容，或者與您的裝置建立\n連線以分享內容。",
   "Menu_Help_Intro": "Bentley Entertainment System 可讓您檢視\n並聆聽透過 Wi-Fi 連線的行動裝置\n或者透過 HDMI 或 USB 連線的相容裝置\n中的內容。",
   "Menu_Help_Output": "選擇 [藍牙] 以連線藍牙耳機\n或者按下音訊分享按鈕以\n傳送音訊輸出至汽車喇叭。\n音訊亦可透過有線耳機使用。",
-  "Menu_Help_Source": "選擇 &lt;span id=\\&quot;text_highlight\\&quot;&gt;[來源]&lt;/span&gt; 以選擇您想要的內容。\n您可以從顯示的清單中選擇服務，\n以檢視來自外部供應商的內容。\n亦可在此功能表中重設瀏覽器。",
+  "Menu_Help_Source": "選擇 <span id=\"text_highlight\">[來源]</span> 以選擇您想要的內容。\n您可以從顯示的清單中選擇服務，\n以檢視來自外部供應商的內容。\n亦可在此功能表中重設瀏覽器。",
   "Menu_Help_USB": "在使用 Bentley Entertainment Control\napp 時，可透過 USB 從相容的\n裝置播放媒體。",
   "Menu_Install_Update": "安裝更新",
   "Menu_Settings_Acoustic_Feedback": "聽覺回饋",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "選擇 &lt;span id=\\&quot;text_highlight\\&quot;&gt;[藍牙]&lt;/span&gt; 以連線藍牙耳機\n或者按下音訊分享按鈕以\n傳送音訊輸出至汽車喇叭。\n音訊亦可透過有線耳機使用。",
-  "Menu_Help_Output_SOP2": "選擇 &lt;span id=\\&quot;text_highlight\\&quot;&gt;[藍牙]&lt;/span&gt; 以連線藍牙耳機\n或者按下音訊分享按鈕以\n傳送音訊輸出至汽車喇叭。\n音訊亦可透過有線耳機使用。",
+  "Menu_Help_Output_SOP1": "選擇 <span id=\"text_highlight\">[藍牙]</span> 以連線藍牙耳機\n或者按下音訊分享按鈕以\n傳送音訊輸出至汽車喇叭。\n音訊亦可透過有線耳機使用。",
+  "Menu_Help_Output_SOP2": "選擇 <span id=\"text_highlight\">[藍牙]</span> 以連線藍牙耳機\n或者按下音訊分享按鈕以\n傳送音訊輸出至汽車喇叭。\n音訊亦可透過有線耳機使用。",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
