--- a/i18n/fr_FR.json
+++ b/i18n/fr_FR.json
@@ -47,7 +47,7 @@
   "Bluetooth_Audio_Sync_Error": "Échec de la synchronisation\naudio. Veuillez réessayer.",
   "Bluetooth_Audio_Sync_Headline": "Synchronisation audio",
   "Bluetooth_Audio_Sync_In_Progress": "Synchronisation en cours...\n{0}%",
-  "Bluetooth_Audio_Sync_Main_Text": "Tenez les écouteurs à coté\ndu microphone sur l&apos;écran\net appuyez sur start.\nL&apos;audio est mis en sourdine\npendant la synchronisation.",
+  "Bluetooth_Audio_Sync_Main_Text": "Tenez les écouteurs à coté\ndu microphone sur l'écran\net appuyez sur start.\nL'audio est mis en sourdine\npendant la synchronisation.",
   "Bluetooth_Headline": "Bluetooth",
   "Bluetooth_Status": "BLUETOOTH",
   "Bluetooth_Visibility_Main_Text": "Appariement de nouveaux écouteurs ?\nLes écouteurs doivent être en mode appariement.",
@@ -60,20 +60,20 @@
   "Connection_Assistant_1_Headline": "Assistant de connexion 1 sur 2",
   "Connection_Assistant_2_Headline": "Assistant de connexion 2 sur 2",
   "Connection_Assistant_Headline": "Assistant de connexion",
-  "Connection_Assistant_Help_Text": "Ou appuyez sur le bouton d&apos;alimentation ci-dessous\npour ouvrir le menu rapide.",
-  "Connection_Assistant_QR_Code_1_Main_Text": "Scannez le QR code pour la\nconnexion à l&apos;écran via Wi-Fi :",
+  "Connection_Assistant_Help_Text": "Ou appuyez sur le bouton d'alimentation ci-dessous\npour ouvrir le menu rapide.",
+  "Connection_Assistant_QR_Code_1_Main_Text": "Scannez le QR code pour la\nconnexion à l'écran via Wi-Fi :",
   "Connection_Assistant_QR_Code_2_Main_Text": "Scan the QR code to download the\nBentley Entertainment Control app",
   "Connection_Assistant_QR_Code_2_SOP1_Main_Text": "Ensure your device and this screen are on\nthe same Wi-Fi network to stream media",
-  "Connection_Assistant_QR_Code_2_SOP2_Main_Text": "Scannez le QR code pour\ntélécharger l&apos;application\nde divertissement Bentley",
+  "Connection_Assistant_QR_Code_2_SOP2_Main_Text": "Scannez le QR code pour\ntélécharger l'application\nde divertissement Bentley",
   "Connection_Failed_Headline": "Wi-Fi",
-  "Connection_Failed_Main_Text": "Impossible d&apos;établir\nune connexion réseau.",
+  "Connection_Failed_Main_Text": "Impossible d'établir\nune connexion réseau.",
   "Connection_Failed_Password_Headline": "Wi-Fi",
   "Connection_Failed_Password_Main_Text": "Échec de la connexion.\nVeuillez vérifier votre mot de passe.",
   "Crosslink_Headline": "Configuration de liaison croisée",
   "Crosslink_Host_Main_Text": "Un processus de appairage a été initié.",
   "Crosslink_Host_SSID_Text": "SSID : {0}",
   "Crosslink_Host_Waiting_Text": "Veuillez patienter...",
-  "Crosslink_Pairing_Name_Text": "Nom d&apos;écran : {0}",
+  "Crosslink_Pairing_Name_Text": "Nom d'écran : {0}",
   "Crosslink_Pairing_Successful_Text": "Configuration correcte de liaison croisée.",
   "Crosslink_Pairing_Text": "Appariement...",
   "Crosslink_Screen_Main_Text": "Veuillez sélectionner le côté du véhicule\nque vous souhaitez affecter à cet écran.",
@@ -85,28 +85,28 @@
   "Device_Search_Menu_Text": "Recherche en cours...",
   "Download_Failed_Headline": "Mise à jour du logiciel",
   "Download_Failed_Main_Text": "Echec du téléchargement du logiciel.\nSouhaitez-vous réessayer ?",
-  "Help_Headline": "Guide de l&apos;utilisateur",
+  "Help_Headline": "Guide de l'utilisateur",
   "IP_Address_Main_Text": "IP address:",
   "IVI_Active_Status": "Sortie audio vers le véhicule",
   "IVI_Delete_Confirm": "Etes-vous sur de vouloir supprimer\n{0} ?\nNote : la sortie audio vers les enceintes\ndu véhicule ne sera plus disponible.",
   "IVI_Headline": "Sortie audio vers le véhicule",
-  "IVI_Main_Text": "Sélectionner le nom d&apos;écran comme source audio\nBluetooth sur le système d&apos;info-divertissement.\nLe volume maximum est déterminé par\nle volume principal de l&apos;info-divertissement.",
-  "IVI_Pairing_Failed": "Echec de l&apos;appariement.\nVeuillez réessayer ultérieurement.",
+  "IVI_Main_Text": "Sélectionner le nom d'écran comme source audio\nBluetooth sur le système d'info-divertissement.\nLe volume maximum est déterminé par\nle volume principal de l'info-divertissement.",
+  "IVI_Pairing_Failed": "Echec de l'appariement.\nVeuillez réessayer ultérieurement.",
   "IVI_Pairing_Headline": "Sortie audio vers le véhicule",
   "IVI_Pairing_In_Progress": "Appariement...",
   "IVI_Pairing_Search": "Recherche en cours...",
   "IVI_Sync_Complete": "Synchronisation audio\nterminée.",
-  "IVI_Sync_Error": "Une erreur s&apos;est produite.\nImpossible de synchroniser l&apos;audio.\nVeuillez réessayer ultérieurement.",
+  "IVI_Sync_Error": "Une erreur s'est produite.\nImpossible de synchroniser l'audio.\nVeuillez réessayer ultérieurement.",
   "IVI_Sync_In_Progress": "Synchronisation en cours...\n{0}%",
-  "IVI_Sync_Main_Text": "Sélectionnez le nom d&apos;écran\ncomme source audio\nBluetooth sur le système\nd&apos;info-divertissement. Vérifiez\nle volume &amp; réduisez le bruit\nen arrière-plan. Appuyez\nDEMARRER quand prêt.",
+  "IVI_Sync_Main_Text": "Sélectionnez le nom d'écran\ncomme source audio\nBluetooth sur le système\nd'info-divertissement. Vérifiez\nle volume & réduisez le bruit\nen arrière-plan. Appuyez\nDEMARRER quand prêt.",
   "Install_Active_Headline": "Note",
-  "Install_Active_Main_Text": "Installation de la mise à jour\nterminée à {0}%.\n\nAssurez-vous que le véhicule est sous tension\njusqu&apos;à la fin de la mise à jour.\n\nLe système redémarre une fois l&apos;installation terminée.",
+  "Install_Active_Main_Text": "Installation de la mise à jour\nterminée à {0}%.\n\nAssurez-vous que le véhicule est sous tension\njusqu'à la fin de la mise à jour.\n\nLe système redémarre une fois l'installation terminée.",
   "Install_Available_Headline": "Mise à jour du logiciel",
-  "Install_Available_Main_Text": "Installation du logiciel disponible.\nSouhaitez-vous l&apos;installer maintenant ?\n\nPendant la mise à jour, \nle système ne sera pas opérationnel.",
+  "Install_Available_Main_Text": "Installation du logiciel disponible.\nSouhaitez-vous l'installer maintenant ?\n\nPendant la mise à jour, \nle système ne sera pas opérationnel.",
   "Install_Delete_Headline": "Mise à jour du logiciel",
   "Install_Delete_Main_Text": "Souhaitez-vous installer ou supprimer\nla mise à jour ?\n\nPendant la mise à jour du logiciel,\nle système ne sera plus opérationnel.",
   "Install_Failed_Headline": "Mise à jour du logiciel",
-  "Install_Failed_Main_Text": "Echec de l&apos;installation du logiciel.\nSouhaitez-vous recommencer ?",
+  "Install_Failed_Main_Text": "Echec de l'installation du logiciel.\nSouhaitez-vous recommencer ?",
   "Install_Successful_Headline": "Mise à jour du logiciel",
   "Install_Successful_Main_Text": "Installation correcte.\nLogiciel mis à jour.",
   "Language_Arabic": "العربية",
@@ -165,17 +165,17 @@
   "Language_Taiwanese": "繁體中文 (台灣)",
   "Language_Turkish": "Türkçe",
   "MCU_Version_Main_Text": "MCU version:",
-  "Max_Volume_Notification": "Volume d&apos;écran réglé au maximum\nAugmentez le volume du système d&apos;info-divertissement.",
+  "Max_Volume_Notification": "Volume d'écran réglé au maximum\nAugmentez le volume du système d'info-divertissement.",
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "Annuler le téléchargement",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "Sélectionnez &lt;span id=\\&quot;text_highlight\\&quot;&gt;CROSSLINK&lt;/span&gt; pour afficher le contenu\nà l&apos;écran. Note : si vous sélectionnez la liaison croisée\net le partage audio est actif, les contrôles audio\net de volume sont indisponibles.",
-  "Menu_Help_HDMI": "Le contenu peut être lu depuis une source HDMI\nlorsqu&apos;un appareil compatible est connecté.\nNote : si aucun contenu n&apos;est lu sur l&apos;appareil HDMI\nsélectionné, l&apos;écran apparaît vide.",
-  "Menu_Help_Input": "Sélectionnez &lt;span id=\\&quot;text_highlight\\&quot;&gt;ENTRE&lt;/span&gt; pour la connexion Wi-Fi.\nVous pouvez diffuser du contenu en direct\nvia des fournisseurs tiers ou établir une connexion\nà votre appareil pour partager du contenu.",
-  "Menu_Help_Intro": "Le système de divertissement permet de visualiser\net d&apos;écouter du contenu de votre appareil connecté\nvia Wi-Fi ou un dispositif compatible connecté\nvia HDMI or USB.",
+  "Menu_Help_Crosslink": "Sélectionnez <span id=\"text_highlight\">CROSSLINK</span> pour afficher le contenu\nà l'écran. Note : si vous sélectionnez la liaison croisée\net le partage audio est actif, les contrôles audio\net de volume sont indisponibles.",
+  "Menu_Help_HDMI": "Le contenu peut être lu depuis une source HDMI\nlorsqu'un appareil compatible est connecté.\nNote : si aucun contenu n'est lu sur l'appareil HDMI\nsélectionné, l'écran apparaît vide.",
+  "Menu_Help_Input": "Sélectionnez <span id=\"text_highlight\">ENTRE</span> pour la connexion Wi-Fi.\nVous pouvez diffuser du contenu en direct\nvia des fournisseurs tiers ou établir une connexion\nà votre appareil pour partager du contenu.",
+  "Menu_Help_Intro": "Le système de divertissement permet de visualiser\net d'écouter du contenu de votre appareil connecté\nvia Wi-Fi ou un dispositif compatible connecté\nvia HDMI or USB.",
   "Menu_Help_Output": "Sélectionnez BLUETOOTH pour connecter les\nécouteurs Bluetooth ou appuyez Partage audio pour\ntransférer sortie audio vers enceintes véhicule.\nL'audio est aussi disponible via un casque filaire.",
-  "Menu_Help_Source": "Sélectionnez &lt;span id=\\&quot;text_highlight\\&quot;&gt;SOURCE&lt;/span&gt; pour choisir la source souhaitée.\nVous pouvez afficher le contenu de fournisseurs tiers\nen sélectionnant le service dans la liste affichée.\nLe navigateur peut aussi être réinitialisé dans le menu.",
-  "Menu_Help_USB": "Le contenu multimédia peut être lu via un\nappareil compatible connecté via USB lors\nde l&apos;utilisation de l&apos;application de commande\nde divertissement Bentley.",
+  "Menu_Help_Source": "Sélectionnez <span id=\"text_highlight\">SOURCE</span> pour choisir la source souhaitée.\nVous pouvez afficher le contenu de fournisseurs tiers\nen sélectionnant le service dans la liste affichée.\nLe navigateur peut aussi être réinitialisé dans le menu.",
+  "Menu_Help_USB": "Le contenu multimédia peut être lu via un\nappareil compatible connecté via USB lors\nde l'utilisation de l'application de commande\nde divertissement Bentley.",
   "Menu_Install_Update": "Installer la mise à jour",
   "Menu_Settings_Acoustic_Feedback": "Signal de confirmation",
   "Menu_Settings_Audio_Sync": "Synchronisation audio",
@@ -189,7 +189,7 @@
   "Menu_Settings_Volume_Persistence": "Persistance du volume",
   "Menu_Software_Analytics": "Retour analyse",
   "Menu_Software_Legal_Information": "Mentions légales",
-  "Menu_Software_Reset": "Rétablir les réglages d&apos;usine",
+  "Menu_Software_Reset": "Rétablir les réglages d'usine",
   "Menu_Software_Update": "Vérifier les mises à jour",
   "Menu_Software_Update_Check": "Vérification des mises à jour...",
   "Menu_Software_Version": "Informations sur le logiciel",
@@ -199,24 +199,24 @@
   "No_Devices_Main_Text": "Aucun appareil trouvé",
   "No_Updates_Headline": "Mise à jour du logiciel",
   "No_Updates_Main_Text": "Aucune mise à jour disponible.",
-  "Notification_Bluetooth_Unavailable": "Bluetooth n&apos;est pas disponible actuellement",
+  "Notification_Bluetooth_Unavailable": "Bluetooth n'est pas disponible actuellement",
   "Notification_Brightness_Unavailable": "Les commandes de luminosité ne sont pas disponibles",
-  "Notification_Child_Lock_Unavailable": "La sécurité enfant n&apos;est pas disponible actuellement",
+  "Notification_Child_Lock_Unavailable": "La sécurité enfant n'est pas disponible actuellement",
   "Notification_Connecting": "Connexion...",
-  "Notification_Crosslink_Unavailable": "La liaison croisée n&apos;est pas disponible actuellement",
+  "Notification_Crosslink_Unavailable": "La liaison croisée n'est pas disponible actuellement",
   "Notification_Error_Reconnect": "Connexion perdue. Tentative de reconnexion...",
-  "Notification_Full_Screen_Unavailable": "Le mode Plein écran n&apos;est pas disponible actuellement",
-  "Notification_HDMI_Unavailable": "HDMI n&apos;est pas disponible actuellement",
-  "Notification_Help_Unavailable": "Le guide de l&apos;utilisateur n&apos;est pas disponible",
-  "Notification_IVI_Unavailable": "Le partage audio n&apos;est pas disponible actuellement",
+  "Notification_Full_Screen_Unavailable": "Le mode Plein écran n'est pas disponible actuellement",
+  "Notification_HDMI_Unavailable": "HDMI n'est pas disponible actuellement",
+  "Notification_Help_Unavailable": "Le guide de l'utilisateur n'est pas disponible",
+  "Notification_IVI_Unavailable": "Le partage audio n'est pas disponible actuellement",
   "Notification_Initialising": "Initialisation...",
-  "Notification_Mute_Unavailable": "La sourdine n&apos;est pas disponible actuellement",
-  "Notification_OTT_Unavailable": "Le fournisseur de contenu externe n&apos;est pas disponible",
-  "Notification_Quick_Menu_Unavailable": "Le menu rapide n&apos;est pas disponible actuellement",
-  "Notification_Screen_Unavailable": "L&apos;écran n&apos;est pas disponible actuellement",
-  "Notification_Temperature": "Température de l&apos;écran trop élevée. Le système\nva s&apos;éteindre pour éviter tout dommage.",
+  "Notification_Mute_Unavailable": "La sourdine n'est pas disponible actuellement",
+  "Notification_OTT_Unavailable": "Le fournisseur de contenu externe n'est pas disponible",
+  "Notification_Quick_Menu_Unavailable": "Le menu rapide n'est pas disponible actuellement",
+  "Notification_Screen_Unavailable": "L'écran n'est pas disponible actuellement",
+  "Notification_Temperature": "Température de l'écran trop élevée. Le système\nva s'éteindre pour éviter tout dommage.",
   "Notification_Volume_Unavailable": "Les commandes de volume ne sont pas disponibles",
-  "Notification_WiFi_Unavailable": "La Wi-Fi n&apos;est pas disponible actuellement",
+  "Notification_WiFi_Unavailable": "La Wi-Fi n'est pas disponible actuellement",
   "PIN_Entry_Help_Text": "Entrer le code PIN",
   "PIN_Entry_Main_Text": "Saisissez le code\nPIN de votre\ndispositif Bluetooth.",
   "Pairing_Failed_Headline": "Bluetooth",
@@ -225,7 +225,7 @@
   "Pairing_Failed_Wrong_PIN_Main_Text": "Échec de la connexion.\nVeuillez vérifier votre code PIN.",
   "Password_Speller_Help_Text": "Saisir le mot de passe",
   "Quick_Menu_Full_Screen": "Plein écran",
-  "Quick_Menu_Help": "Guide de l&apos;utilisateur",
+  "Quick_Menu_Help": "Guide de l'utilisateur",
   "Quick_Menu_Screen_Off": "Arrêt écran",
   "Quick_Menu_Settings": "Réglages",
   "Quick_Menu_Source": "Source",
@@ -236,15 +236,15 @@
   "Reset_Browser_Headline": "Réinitialiser le navigateur",
   "Reset_Browser_Main_Text": "Êtes-vous sûr de vouloir réinitialiser le navigateur ?\nToutes les informations du compte seront perdues\net vous devrez vous reconnecter.",
   "Run_Time_Main_Text": "Running time:",
-  "Screen_Off_Notification": "Appuyer sur l&apos;écran pour l&apos;activer",
+  "Screen_Off_Notification": "Appuyer sur l'écran pour l'activer",
   "Screen_Timeout_Headline": "Délai extinction écran",
   "Settings_Headline": "Réglages",
   "Shutting_Down_Notification": "Arrêt du système en cours...",
   "Software_Legals_Headline": "Mentions légales",
-  "Software_Reset_Headline": "Rétablir les réglages d&apos;usine",
+  "Software_Reset_Headline": "Rétablir les réglages d'usine",
   "Software_Reset_Main_Text": "En restaurant le système, tous les paramètres sont\nréinitialisés. Toutes les données, réseaux, appareils\nBluetooth et mots de passe seront supprimés.\n\nÊtes-vous sur de vouloir réinitialiser ?",
-  "Software_Reset_Successful_Headline": "Rétablir les réglages d&apos;usine",
-  "Software_Reset_Successful_Main_Text": "Les réglages d&apos;usine ont été restaurés.\nLe système va redémarrer.",
+  "Software_Reset_Successful_Headline": "Rétablir les réglages d'usine",
+  "Software_Reset_Successful_Main_Text": "Les réglages d'usine ont été restaurés.\nLe système va redémarrer.",
   "Software_Update_Headline": "Logiciel",
   "Software_Version_Headline": "Informations sur le logiciel",
   "Software_Version_Main_Text": "Version du logiciel",
@@ -270,8 +270,8 @@
   "Update_Unavailable_Headline": "Mise à jour du logiciel",
   "Update_Unavailable_Main_Text": "Impossible de vérifier les mises à jour.\nVeuillez réessayer ultérieurement.",
   "Use_Extension_Headline": "Note",
-  "Use_Extension_Main_Text_PL": "Le système de divertissement Bentley\nva s&apos;arrêter dans {0} secondes.\nAppuyez sur OK pour prolonger son utilisation.",
-  "Use_Extension_Main_Text_SG": "Le système de divertissement Bentley\nva s&apos;arreter dans {0} seconde.\nAppuyez sur OK pour prolonger son utilisation.",
+  "Use_Extension_Main_Text_PL": "Le système de divertissement Bentley\nva s'arrêter dans {0} secondes.\nAppuyez sur OK pour prolonger son utilisation.",
+  "Use_Extension_Main_Text_SG": "Le système de divertissement Bentley\nva s'arreter dans {0} seconde.\nAppuyez sur OK pour prolonger son utilisation.",
   "Wi-Fi_Status": "WI-FI",
   "WiFi_Headline": "Wi-Fi",
   "acoustic": "Acoustic",
@@ -328,11 +328,11 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Sélectionnez &lt;span id=\\&quot;text_highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; pour connecter des\nécouteurs Bluetooth.\n\nL&apos;audio est aussi disponible via un casque filaire.",
-  "Menu_Help_Output_SOP2": "Sélectionnez &lt;span id=\\&quot;text_highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt; pour connecter des\nécouteurs Bluetooth ou appuyez PARTAGE\nAUDIO pour transférer la sortie audio vers\nles enceintes du véhicule. L&apos;audio est aussi\ndisponible via un casque filaire.",
+  "Menu_Help_Output_SOP1": "Sélectionnez <span id=\"text_highlight\">BLUETOOTH</span> pour connecter des\nécouteurs Bluetooth.\n\nL'audio est aussi disponible via un casque filaire.",
+  "Menu_Help_Output_SOP2": "Sélectionnez <span id=\"text_highlight\">BLUETOOTH</span> pour connecter des\nécouteurs Bluetooth ou appuyez PARTAGE\nAUDIO pour transférer la sortie audio vers\nles enceintes du véhicule. L'audio est aussi\ndisponible via un casque filaire.",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
   "Menu_Settings_Legal_Info": "Legal information and privacy policy",
-  "Notification_SOP1_Funcion_Unavailable": "La fonction n&apos;est pas disponible actuellement"
+  "Notification_SOP1_Funcion_Unavailable": "La fonction n'est pas disponible actuellement"
 }
