--- a/i18n/ja_JP.json
+++ b/i18n/ja_JP.json
@@ -169,12 +169,12 @@
   "Memory_Usage_Main_Text": "Memory usage:",
   "Menu_Download_Active": "ダウンロード取消",
   "Menu_Download_Active_Preview": "{0}%",
-  "Menu_Help_Crosslink": "ｺﾝﾊﾟﾆｵﾝ画面に出ているコンテンツを見るには\n&lt;span id=\\&quot;text_Highlight\\&quot;&gt;CROSSLINK&lt;/span&gt;を選びます。注: オーディオ共有中\nにCrosslinkを選択するとオーディオとボリューム\nコントロールを利用できません。",
+  "Menu_Help_Crosslink": "ｺﾝﾊﾟﾆｵﾝ画面に出ているコンテンツを見るには\n<span id=\"text_Highlight\">CROSSLINK</span>を選びます。注: オーディオ共有中\nにCrosslinkを選択するとオーディオとボリューム\nコントロールを利用できません。",
   "Menu_Help_HDMI": "互換デバイスを接続するとコンテンツはHDMI\nソースから再生可能になります\n注:選択したときコンテンツがHDMIデバイスに再生\nされないとき、画面は空白のままです。",
-  "Menu_Help_Input": "Wi-Fiネットワークに接続するには&lt;span id=\\&quot;text_Highlight\\&quot;&gt;INPUT&lt;/span&gt;を選択\nしてください.。これでコンテンツを外部プロバイ\nダーを通してストリームしたり、自分のデバイ\nスと接続してコンテンツを共有できます。",
+  "Menu_Help_Input": "Wi-Fiネットワークに接続するには<span id=\"text_Highlight\">INPUT</span>を選択\nしてください.。これでコンテンツを外部プロバイ\nダーを通してストリームしたり、自分のデバイ\nスと接続してコンテンツを共有できます。",
   "Menu_Help_Intro": "Bentley Entertainment SystemではWi-Fiでまたは\nHDMIかUSBで接続した互換デバイスから\n接続したモバイルデバイスで視聴可能\nになります。",
   "Menu_Help_Output": "Bluetoothヘッドフォンと接続BLUETOOTH\nを選択するまたは車のスピーカーにオーディオを\n出力するにはオーディオ共有ボタンを押します。\nオーディオは有線ヘッドフォンでも聞けます。",
-  "Menu_Help_Source": "望みのコンテンツを選ぶには&lt;span id=\\&quot;text_Highlight\\&quot;&gt;SOURCE&lt;/span&gt;\nを選択します。リストからサービスを選択す\nると外部プロバイダーのコンテンツを見れます。\nブラウザーをこのメニューでもﾘｾｯﾄ可能です。",
+  "Menu_Help_Source": "望みのコンテンツを選ぶには<span id=\"text_Highlight\">SOURCE</span>\nを選択します。リストからサービスを選択す\nると外部プロバイダーのコンテンツを見れます。\nブラウザーをこのメニューでもﾘｾｯﾄ可能です。",
   "Menu_Help_USB": "Bentley Entertainment Control appを使うとき\nUSBで接続されている互換デバイスでメディア\nを再生できます。",
   "Menu_Install_Update": "アップデートをインストール",
   "Menu_Settings_Acoustic_Feedback": "タッチ操作音",
@@ -328,8 +328,8 @@
   "Connection_Assistant_QR_Code_2_SOP1_Scan_Text": "Scan the QR code to connect:",
   "Legal_Info_Headline": "Legal information and privacy policy",
   "Menu_Help_OTA": "To discover new features and bug fixes,\ndownload the latest software from the settings menu.",
-  "Menu_Help_Output_SOP1": "Bluetoothヘッドフォンと接続&lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;\nを選択するまたは車のスピーカーにオーディオを\n出力するにはオーディオ共有ボタンを押します。\nオーディオは有線ヘッドフォンでも聞けます。",
-  "Menu_Help_Output_SOP2": "Bluetoothヘッドフォンと接続&lt;span id=\\&quot;text_Highlight\\&quot;&gt;BLUETOOTH&lt;/span&gt;\nを選択するまたは車のスピーカーにオーディオを\n出力するにはオーディオ共有ボタンを押します。\nオーディオは有線ヘッドフォンでも聞けます。",
+  "Menu_Help_Output_SOP1": "Bluetoothヘッドフォンと接続<span id=\"text_Highlight\">BLUETOOTH</span>\nを選択するまたは車のスピーカーにオーディオを\n出力するにはオーディオ共有ボタンを押します。\nオーディオは有線ヘッドフォンでも聞けます。",
+  "Menu_Help_Output_SOP2": "Bluetoothヘッドフォンと接続<span id=\"text_Highlight\">BLUETOOTH</span>\nを選択するまたは車のスピーカーにオーディオを\n出力するにはオーディオ共有ボタンを押します。\nオーディオは有線ヘッドフォンでも聞けます。",
   "Menu_Legal_About_Us": "About us",
   "Menu_Legal_Open_Source": "Open source declaration",
   "Menu_Legal_Privacy_Policy": "Privacy policy",
